feat(locales): add Spanish translations

--- a/src/locales/es/approval-role-group-management.json
+++ b/src/locales/es/approval-role-group-management.json
@@ -1,36 +1,36 @@
 {
-  "menu": "Approval Role Group Management",
-  "description": "Manage and organize approval role groups",
-  "addButton": "Add New Group",
-  "refresh": "Refresh",
-  "searchPlaceholder": "Search...",
-  "loading": "Loading...",
-  "noData": "No data found",
-  "noDataDescription": "No records found matching your search criteria or no records added yet.",
+  "menu": "Gestión de Grupos de Roles de Aprobación",
+  "description": "Gestionar y organizar grupos de roles de aprobación",
+  "addButton": "Añadir Nuevo Grupo",
+  "refresh": "Actualizar",
+  "searchPlaceholder": "Buscar...",
+  "loading": "Cargando...",
+  "noData": "No se encontraron datos",
+  "noDataDescription": "No se encontraron registros que coincidan con su búsqueda o no hay registros aún.",
   "table": {
     "id": "ID",
-    "name": "Group Name",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "actions": "Actions",
-    "showing": "Showing {{from}}-{{to}} of {{total}} records"
+    "name": "Nombre del Grupo",
+    "createdDate": "Fecha Creación",
+    "createdBy": "Creado Por",
+    "actions": "Acciones",
+    "showing": "Mostrando {{from}}-{{to}} de {{total}} registros"
   },
   "delete": {
-    "confirmTitle": "Delete Confirmation",
-    "confirmMessage": "This action cannot be undone. Do you want to continue?"
+    "confirmTitle": "Confirmación de Eliminación",
+    "confirmMessage": "Esta acción no se puede deshacer. ¿Desea continuar?"
   },
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "deleteButton": "Delete",
+  "cancel": "Cancelar",
+  "save": "Guardar",
+  "saving": "Guardando...",
+  "deleteButton": "Eliminar",
   "form": {
-    "editTitle": "Edit Approval Role Group",
-    "addTitle": "Add New Approval Role Group",
-    "editDescription": "Edit approval role group information",
-    "addDescription": "Enter new approval role group information",
-    "name": "Group Name",
-    "namePlaceholder": "Enter group name",
-    "nameRequired": "Group name is required",
-    "nameMaxLength": "Group name can be at most 100 characters"
+    "editTitle": "Editar Grupo de Roles",
+    "addTitle": "Añadir Nuevo Grupo de Roles",
+    "editDescription": "Editar información del grupo de roles",
+    "addDescription": "Ingrese información del nuevo grupo",
+    "name": "Nombre del Grupo",
+    "namePlaceholder": "Ingrese nombre del grupo",
+    "nameRequired": "El nombre del grupo es obligatorio",
+    "nameMaxLength": "El nombre puede tener máx. 100 caracteres"
   }
 }
