--- a/src/locales/es/approval-role-management.json
+++ b/src/locales/es/approval-role-management.json
@@ -1,51 +1,51 @@
 {
   "approvalRole": {
-    "menu": "Approval Role Management",
-    "description": "Manage and organize approval roles",
-    "addButton": "Add New Approval Role",
-    "searchPlaceholder": "Search...",
-    "refresh": "Refresh",
-    "loading": "Loading...",
-    "noData": "No data",
+    "menu": "Gestión de Roles de Aprobación",
+    "description": "Gestionar y organizar roles de aprobación",
+    "addButton": "Añadir Nuevo Rol",
+    "searchPlaceholder": "Buscar...",
+    "refresh": "Actualizar",
+    "loading": "Cargando...",
+    "noData": "Sin datos",
     "table": {
       "id": "ID",
-      "approvalRoleGroupName": "Role Group",
-      "name": "Role Name",
-      "maxAmount": "Max Amount",
-      "createdDate": "Created Date",
-      "createdBy": "Created By",
-      "actions": "Actions",
-      "totalRecords": "Total {{count}} records.",
-      "page": "Page {{current}} / {{total}}",
-      "previous": "Previous",
-      "next": "Next"
+      "approvalRoleGroupName": "Grupo de Roles",
+      "name": "Nombre del Rol",
+      "maxAmount": "Monto Máximo",
+      "createdDate": "Fecha Creación",
+      "createdBy": "Creado Por",
+      "actions": "Acciones",
+      "totalRecords": "Total {{count}} registros.",
+      "page": "Página {{current}} / {{total}}",
+      "previous": "Anterior",
+      "next": "Siguiente"
     },
     "delete": {
-      "confirmTitle": "Delete Confirmation",
-      "confirmMessage": "Are you sure you want to delete this record? This action cannot be undone.",
-      "cancelButton": "Cancel",
-      "confirmButton": "Delete",
-      "deleting": "Deleting..."
+      "confirmTitle": "Confirmación de Eliminación",
+      "confirmMessage": "¿Está seguro de que desea eliminar este registro? Esta acción no se puede deshacer.",
+      "cancelButton": "Cancelar",
+      "confirmButton": "Eliminar",
+      "deleting": "Eliminando..."
     },
     "form": {
-      "editTitle": "Edit Approval Role",
-      "addTitle": "Add New Approval Role",
-      "editDescription": "Edit approval role details",
-      "addDescription": "Enter new approval role details",
-      "approvalRoleGroupId": "Approval Role Group",
-      "selectApprovalRoleGroup": "Select Approval Role Group",
-      "noApprovalRoleGroupSelected": "No approval role group selected",
-      "name": "Role Name",
-      "namePlaceholder": "Enter role name",
-      "maxAmount": "Max Amount",
-      "maxAmountPlaceholder": "Enter max amount",
-      "approvalRoleGroupIdRequired": "Approval role group selection is required",
-      "nameRequired": "Role name is required",
-      "nameMaxLength": "Role name can be at most 100 characters",
-      "maxAmountMin": "Max amount cannot be less than 0",
-      "cancel": "Cancel",
-      "save": "Save",
-      "saving": "Saving..."
+      "editTitle": "Editar Rol de Aprobación",
+      "addTitle": "Añadir Nuevo Rol de Aprobación",
+      "editDescription": "Editar detalles del rol de aprobación",
+      "addDescription": "Ingrese detalles del nuevo rol",
+      "approvalRoleGroupId": "Grupo de Roles de Aprobación",
+      "selectApprovalRoleGroup": "Seleccionar Grupo de Roles",
+      "noApprovalRoleGroupSelected": "Ningún grupo seleccionado",
+      "name": "Nombre del Rol",
+      "namePlaceholder": "Ingrese nombre del rol",
+      "maxAmount": "Monto Máximo",
+      "maxAmountPlaceholder": "Ingrese monto máximo",
+      "approvalRoleGroupIdRequired": "La selección del grupo es obligatoria",
+      "nameRequired": "El nombre del rol es obligatorio",
+      "nameMaxLength": "El nombre puede tener máx. 100 caracteres",
+      "maxAmountMin": "El monto máximo no puede ser menor a 0",
+      "cancel": "Cancelar",
+      "save": "Guardar",
+      "saving": "Guardando..."
     }
   }
 }
