--- a/src/locales/es/city-management.json
+++ b/src/locales/es/city-management.json
@@ -1,50 +1,50 @@
 {
-  "menu": "City Management",
-  "description": "Manage and organize cities",
-  "addButton": "Add New City",
-  "searchPlaceholder": "Search...",
-  "loading": "Loading...",
-  "noData": "No data found",
+  "menu": "Gestión de Ciudades",
+  "description": "Gestionar y organizar ciudades",
+  "addButton": "Añadir Nueva Ciudad",
+  "searchPlaceholder": "Buscar...",
+  "loading": "Cargando...",
+  "noData": "No se encontraron datos",
   "stats": {
-    "totalCities": "Total Cities",
-    "activeCities": "Active Cities",
-    "newThisMonth": "New This Month"
+    "totalCities": "Ciudades Totales",
+    "activeCities": "Ciudades Activas",
+    "newThisMonth": "Nuevas este Mes"
   },
   "table": {
     "id": "ID",
-    "name": "City Name",
-    "erpCode": "ERP Code",
-    "countryName": "Country Name",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "name": "Nombre de la Ciudad",
+    "erpCode": "Código ERP",
+    "countryName": "Nombre del País",
+    "createdDate": "Fecha de Creación",
+    "createdBy": "Creado Por",
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Página {{current}} / {{total}}"
   },
   "form": {
-    "editCity": "Edit City",
-    "addCity": "Add New City",
-    "editDescription": "Edit city details",
-    "addDescription": "Enter new city details",
-    "name": "City Name",
-    "namePlaceholder": "Enter city name",
-    "country": "Country",
-    "selectCountry": "Select country",
-    "erpCode": "ERP Code",
-    "erpCodePlaceholder": "Enter ERP code (optional)",
-    "cancel": "Cancel",
-    "save": "Save",
-    "saving": "Saving...",
-    "nameRequired": "City name is required",
-    "nameMaxLength": "City name can be at most 100 characters",
-    "erpCodeMaxLength": "ERP code can be at most 10 characters",
-    "countryRequired": "Country selection is required"
+    "editCity": "Editar Ciudad",
+    "addCity": "Añadir Nueva Ciudad",
+    "editDescription": "Editar detalles de la ciudad",
+    "addDescription": "Ingrese detalles de la nueva ciudad",
+    "name": "Nombre de la Ciudad",
+    "namePlaceholder": "Ingrese nombre de la ciudad",
+    "country": "País",
+    "selectCountry": "Seleccionar país",
+    "erpCode": "Código ERP",
+    "erpCodePlaceholder": "Ingrese código ERP (opcional)",
+    "cancel": "Cancelar",
+    "save": "Guardar",
+    "saving": "Guardando...",
+    "nameRequired": "El nombre de la ciudad es obligatorio",
+    "nameMaxLength": "El nombre de la ciudad debe tener como máximo 100 caracteres",
+    "erpCodeMaxLength": "El código ERP debe tener como máximo 10 caracteres",
+    "countryRequired": "La selección de país es obligatoria"
   },
-  "actions": "Actions",
+  "actions": "Acciones",
   "delete": {
-    "button": "Delete",
-    "confirmTitle": "Delete City",
-    "confirmMessage": "Are you sure you want to delete {{name}}?"
+    "button": "Eliminar",
+    "confirmTitle": "Eliminar Ciudad",
+    "confirmMessage": "¿Está seguro de que desea eliminar {{name}}?"
   },
-  "previous": "Previous",
-  "next": "Next"
+  "previous": "Anterior",
+  "next": "Siguiente"
 }
