--- a/src/locales/es/contact-management.json
+++ b/src/locales/es/contact-management.json
@@ -1,77 +1,77 @@
 {
-  "menu": "Customer Contact Management",
-  "description": "Manage and edit customer contacts",
-  "addButton": "Add New Contact",
+  "menu": "Gestión de Contactos de Clientes",
+  "description": "Gestionar y editar contactos de clientes",
+  "addButton": "Añadir Nuevo Contacto",
   "stats": {
-    "totalContacts": "Total Contacts",
-    "activeContacts": "Active Contacts",
-    "newThisMonth": "New This Month"
+    "totalContacts": "Total de Contactos",
+    "activeContacts": "Contactos Activos",
+    "newThisMonth": "Nuevos este Mes"
   },
   "table": {
     "id": "ID",
-    "fullName": "Full Name",
-    "email": "Email",
-    "phone": "Phone",
-    "mobile": "Mobile",
-    "notes": "Notes",
-    "customer": "Customer",
-    "title": "Title",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "updatedDate": "Updated Date",
-    "updatedBy": "Updated By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "fullName": "Nombre Completo",
+    "email": "Correo Electrónico",
+    "phone": "Teléfono",
+    "mobile": "Móvil",
+    "notes": "Notas",
+    "customer": "Cliente",
+    "title": "Título",
+    "createdDate": "Fecha de Creación",
+    "createdBy": "Creado Por",
+    "updatedDate": "Fecha de Actualización",
+    "updatedBy": "Actualizado Por",
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Página {{current}} / {{total}}"
   },
   "form": {
-    "addContact": "Add New Contact",
-    "editContact": "Edit Contact",
-    "addDescription": "Enter new contact information",
-    "editDescription": "Edit contact information",
-    "fullName": "Full Name",
-    "fullNamePlaceholder": "Enter full name",
-    "fullNameRequired": "Full name is required",
-    "fullNameMaxLength": "Full name must be at most 100 characters",
-    "email": "Email",
-    "emailPlaceholder": "Enter email address (optional)",
-    "emailInvalid": "Please enter a valid email address",
-    "emailMaxLength": "Email must be at most 100 characters",
-    "phone": "Phone",
-    "phonePlaceholder": "Enter phone number (optional)",
-    "phoneMaxLength": "Phone must be at most 20 characters",
-    "mobile": "Mobile",
-    "mobilePlaceholder": "Enter mobile phone number (optional)",
-    "mobileMaxLength": "Mobile must be at most 20 characters",
-    "notes": "Notes",
-    "notesPlaceholder": "Enter notes (optional)",
-    "notesMaxLength": "Notes must be at most 250 characters",
-    "customer": "Customer",
-    "selectCustomer": "Select customer",
-    "customerRequired": "Customer selection is required",
-    "title": "Title",
-    "selectTitle": "Select title",
-    "titleRequired": "Title selection is required"
+    "addContact": "Añadir Nuevo Contacto",
+    "editContact": "Editar Contacto",
+    "addDescription": "Introducir información del nuevo contacto",
+    "editDescription": "Editar información del contacto",
+    "fullName": "Nombre Completo",
+    "fullNamePlaceholder": "Introducir nombre completo",
+    "fullNameRequired": "El nombre completo es obligatorio",
+    "fullNameMaxLength": "El nombre completo debe tener como máximo 100 caracteres",
+    "email": "Correo Electrónico",
+    "emailPlaceholder": "Introducir dirección de correo electrónico (opcional)",
+    "emailInvalid": "Por favor, introduzca una dirección de correo electrónico válida",
+    "emailMaxLength": "El correo electrónico debe tener como máximo 100 caracteres",
+    "phone": "Teléfono",
+    "phonePlaceholder": "Introducir número de teléfono (opcional)",
+    "phoneMaxLength": "El teléfono debe tener como máximo 20 caracteres",
+    "mobile": "Móvil",
+    "mobilePlaceholder": "Introducir número de teléfono móvil (opcional)",
+    "mobileMaxLength": "El móvil debe tener como máximo 20 caracteres",
+    "notes": "Notas",
+    "notesPlaceholder": "Introducir notas (opcional)",
+    "notesMaxLength": "Las notas deben tener como máximo 250 caracteres",
+    "customer": "Cliente",
+    "selectCustomer": "Seleccionar cliente",
+    "customerRequired": "La selección del cliente es obligatoria",
+    "title": "Título",
+    "selectTitle": "Seleccionar título",
+    "titleRequired": "La selección del título es obligatoria"
   },
   "delete": {
-    "action": "Delete",
-    "confirmTitle": "Delete Contact",
-    "confirmMessage": "Are you sure you want to delete {{name}} contact?"
+    "action": "Eliminar",
+    "confirmTitle": "Eliminar Contacto",
+    "confirmMessage": "¿Está seguro de que desea eliminar el contacto {{name}}?"
   },
-  "loading": "Loading...",
-  "noData": "No data",
-  "actions": "Actions",
-  "edit": "Edit",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
+  "loading": "Cargando...",
+  "noData": "Sin datos",
+  "actions": "Acciones",
+  "edit": "Editar",
+  "previous": "Anterior",
+  "next": "Siguiente",
+  "cancel": "Cancelar",
+  "save": "Guardar",
+  "saving": "Guardando...",
   "messages": {
-    "createSuccess": "Contact created successfully",
-    "createError": "Contact could not be created",
-    "updateSuccess": "Contact updated successfully",
-    "updateError": "Contact could not be updated",
-    "deleteSuccess": "Contact deleted successfully",
-    "deleteError": "Contact could not be deleted"
+    "createSuccess": "Contacto creado con éxito",
+    "createError": "No se pudo crear el contacto",
+    "updateSuccess": "Contacto actualizado con éxito",
+    "updateError": "No se pudo actualizar el contacto",
+    "deleteSuccess": "Contacto eliminado con éxito",
+    "deleteError": "No se pudo eliminar el contacto"
   }
 }
