--- a/src/locales/es/country-management.json
+++ b/src/locales/es/country-management.json
@@ -1,52 +1,52 @@
 {
-  "menu": "Country Management",
-  "description": "Manage and edit countries",
-  "addButton": "Add New Country",
-  "search": "Search...",
-  "loading": "Loading...",
-  "noData": "No data found",
-  "actions": "Actions",
-  "previous": "Previous",
-  "next": "Next",
-  "deleteConfirmTitle": "Delete Confirmation",
-  "cancel": "Cancel",
-  "deleting": "Deleting...",
-  "delete": "Delete",
-  "saving": "Saving...",
-  "save": "Save",
+  "menu": "Gestión de Países",
+  "description": "Gestionar y editar países",
+  "addButton": "Añadir Nuevo País",
+  "search": "Buscar...",
+  "loading": "Cargando...",
+  "noData": "No se encontraron datos",
+  "actions": "Acciones",
+  "previous": "Anterior",
+  "next": "Siguiente",
+  "deleteConfirmTitle": "Confirmación de Eliminación",
+  "cancel": "Cancelar",
+  "deleting": "Eliminando...",
+  "delete": "Eliminar",
+  "saving": "Guardando...",
+  "save": "Guardar",
   "stats": {
-    "totalCountries": "Total Countries",
-    "activeCountries": "Active Countries",
-    "newThisMonth": "New This Month"
+    "totalCountries": "Países Totales",
+    "activeCountries": "Países Activos",
+    "newThisMonth": "Nuevos este Mes"
   },
   "table": {
     "id": "ID",
-    "name": "Country Name",
-    "code": "Code",
-    "erpCode": "ERP Code",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "name": "Nombre del País",
+    "code": "Código",
+    "erpCode": "Código ERP",
+    "createdDate": "Fecha de Creación",
+    "createdBy": "Creado Por",
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Página {{current}} / {{total}}"
   },
   "form": {
-    "addCountry": "Add New Country",
-    "editCountry": "Edit Country",
-    "addDescription": "Enter new country information",
-    "editDescription": "Edit country information",
-    "name": "Country Name",
-    "namePlaceholder": "Enter country name",
-    "code": "Country Code",
-    "codePlaceholder": "Enter country code (e.g. TR, US)",
-    "erpCode": "ERP Code",
-    "erpCodePlaceholder": "Enter ERP code (optional)",
-    "nameRequired": "Country name is required",
-    "nameMaxLength": "Country name cannot exceed 100 characters",
-    "codeMinLength": "Country code must be at least 2 characters",
-    "codeMaxLength": "Country code cannot exceed 5 characters",
-    "erpCodeMaxLength": "ERP code cannot exceed 10 characters"
+    "addCountry": "Añadir Nuevo País",
+    "editCountry": "Editar País",
+    "addDescription": "Ingrese información del nuevo país",
+    "editDescription": "Editar información del país",
+    "name": "Nombre del País",
+    "namePlaceholder": "Ingrese nombre del país",
+    "code": "Código del País",
+    "codePlaceholder": "Ingrese código del país (ej. ES, US)",
+    "erpCode": "Código ERP",
+    "erpCodePlaceholder": "Ingrese código ERP (opcional)",
+    "nameRequired": "El nombre del país es obligatorio",
+    "nameMaxLength": "El nombre del país no puede exceder los 100 caracteres",
+    "codeMinLength": "El código del país debe tener al menos 2 caracteres",
+    "codeMaxLength": "El código del país no puede exceder los 5 caracteres",
+    "erpCodeMaxLength": "El código ERP no puede exceder los 10 caracteres"
   },
   "deleteConfirm": {
-    "confirmMessage": "Are you sure you want to delete {{name}}?"
+    "confirmMessage": "¿Está seguro de que desea eliminar {{name}}?"
   }
 }
