--- a/src/locales/es/customer-management.json
+++ b/src/locales/es/customer-management.json
@@ -1,105 +1,105 @@
 {
-  "menu": "Customer Management",
-  "description": "Manage and edit customers",
-  "addButton": "Add New Customer",
+  "menu": "Gestión de Clientes",
+  "description": "Gestionar y editar clientes",
+  "addButton": "Añadir Nuevo Cliente",
   "stats": {
-    "totalCustomers": "Total Customers",
-    "approvedCustomers": "Approved Customers",
-    "newThisMonth": "New This Month"
+    "totalCustomers": "Total de Clientes",
+    "approvedCustomers": "Clientes Aprobados",
+    "newThisMonth": "Nuevos este Mes"
   },
   "table": {
     "id": "ID",
-    "customerCode": "Customer Code",
-    "name": "Customer Name",
-    "customerType": "Customer Type",
-    "tcknNumber": "TCKN Number",
-    "country": "Country",
-    "city": "City",
-    "district": "District",
-    "phone": "Phone",
-    "email": "Email",
-    "isApproved": "Approved",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "customerCode": "Código de Cliente",
+    "name": "Nombre del Cliente",
+    "customerType": "Tipo de Cliente",
+    "tcknNumber": "Número TCKN",
+    "country": "País",
+    "city": "Ciudad",
+    "district": "Distrito",
+    "phone": "Teléfono",
+    "email": "Correo Electrónico",
+    "isApproved": "Aprobado",
+    "createdDate": "Fecha de Creación",
+    "createdBy": "Creado Por",
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Página {{current}} / {{total}}"
   },
   "form": {
-    "addCustomer": "Add New Customer",
-    "editCustomer": "Edit Customer",
-    "addDescription": "Enter new customer information",
-    "editDescription": "Edit customer information",
-    "customerCode": "Customer Code",
-    "customerCodePlaceholder": "Enter customer code (optional)",
-    "customerCodeMaxLength": "Customer code must be at most 100 characters",
-    "name": "Customer Name",
-    "namePlaceholder": "Enter customer name",
-    "nameRequired": "Customer name is required",
-    "nameMaxLength": "Customer name must be at most 250 characters",
-    "taxNumber": "Tax Number",
-    "taxNumberPlaceholder": "Enter tax number (optional)",
-    "taxNumberMaxLength": "Tax number must be at most 15 characters",
-    "taxOffice": "Tax Office",
-    "taxOfficePlaceholder": "Enter tax office (optional)",
-    "taxOfficeMaxLength": "Tax office must be at most 100 characters",
-    "tcknNumber": "TCKN Number",
-    "tcknNumberPlaceholder": "Enter TCKN number (optional)",
-    "tcknNumberMaxLength": "TCKN number must be at most 20 characters",
-    "address": "Address",
-    "addressPlaceholder": "Enter address (optional)",
-    "addressMaxLength": "Address must be at most 500 characters",
-    "phone": "Phone",
-    "phonePlaceholder": "Enter phone number (optional)",
-    "phoneMaxLength": "Phone number must be at most 100 characters",
-    "email": "Email",
-    "emailPlaceholder": "Enter email address (optional)",
-    "emailInvalid": "Please enter a valid email address",
-    "emailMaxLength": "Email address must be at most 100 characters",
-    "website": "Website",
-    "websitePlaceholder": "Enter website address (optional)",
-    "websiteMaxLength": "Website address must be at most 100 characters",
-    "notes": "Notes",
-    "notesPlaceholder": "Enter notes (optional)",
-    "notesMaxLength": "Notes must be at most 250 characters",
-    "country": "Country",
-    "selectCountry": "Select country",
-    "countryRequired": "Country selection is required",
-    "city": "City",
-    "selectCity": "Select city",
-    "cityRequired": "City selection is required",
-    "district": "District",
-    "selectDistrict": "Select district",
-    "districtRequired": "District selection is required",
-    "customerType": "Customer Type",
-    "selectCustomerType": "Select customer type",
-    "customerTypeRequired": "Customer type selection is required",
-    "erpCode": "ERP Code",
-    "erpCodePlaceholder": "Enter ERP code (optional)",
-    "erpCodeMaxLength": "ERP code must be at most 20 characters",
-    "isApproved": "Approved",
-    "isCompleted": "Completed",
-    "isERPIntegrated": "ERP Integrated"
+    "addCustomer": "Añadir Nuevo Cliente",
+    "editCustomer": "Editar Cliente",
+    "addDescription": "Introducir información del nuevo cliente",
+    "editDescription": "Editar información del cliente",
+    "customerCode": "Código de Cliente",
+    "customerCodePlaceholder": "Introducir código de cliente (opcional)",
+    "customerCodeMaxLength": "El código de cliente debe tener como máximo 100 caracteres",
+    "name": "Nombre del Cliente",
+    "namePlaceholder": "Introducir nombre del cliente",
+    "nameRequired": "El nombre del cliente es obligatorio",
+    "nameMaxLength": "El nombre del cliente debe tener como máximo 250 caracteres",
+    "taxNumber": "Número de Identificación Fiscal",
+    "taxNumberPlaceholder": "Introducir número de identificación fiscal (opcional)",
+    "taxNumberMaxLength": "El número de identificación fiscal debe tener como máximo 15 caracteres",
+    "taxOffice": "Oficina de Impuestos",
+    "taxOfficePlaceholder": "Introducir oficina de impuestos (opcional)",
+    "taxOfficeMaxLength": "La oficina de impuestos debe tener como máximo 100 caracteres",
+    "tcknNumber": "Número TCKN",
+    "tcknNumberPlaceholder": "Introducir número TCKN (opcional)",
+    "tcknNumberMaxLength": "El número TCKN debe tener como máximo 20 caracteres",
+    "address": "Dirección",
+    "addressPlaceholder": "Introducir dirección (opcional)",
+    "addressMaxLength": "La dirección debe tener como máximo 500 caracteres",
+    "phone": "Teléfono",
+    "phonePlaceholder": "Introducir número de teléfono (opcional)",
+    "phoneMaxLength": "El número de teléfono debe tener como máximo 100 caracteres",
+    "email": "Correo Electrónico",
+    "emailPlaceholder": "Introducir dirección de correo electrónico (opcional)",
+    "emailInvalid": "Por favor, introduzca una dirección de correo electrónico válida",
+    "emailMaxLength": "La dirección de correo electrónico debe tener como máximo 100 caracteres",
+    "website": "Sitio Web",
+    "websitePlaceholder": "Introducir dirección del sitio web (opcional)",
+    "websiteMaxLength": "La dirección del sitio web debe tener como máximo 100 caracteres",
+    "notes": "Notas",
+    "notesPlaceholder": "Introducir notas (opcional)",
+    "notesMaxLength": "Las notas deben tener como máximo 250 caracteres",
+    "country": "País",
+    "selectCountry": "Seleccionar país",
+    "countryRequired": "La selección del país es obligatoria",
+    "city": "Ciudad",
+    "selectCity": "Seleccionar ciudad",
+    "cityRequired": "La selección de la ciudad es obligatoria",
+    "district": "Distrito",
+    "selectDistrict": "Seleccionar distrito",
+    "districtRequired": "La selección del distrito es obligatoria",
+    "customerType": "Tipo de Cliente",
+    "selectCustomerType": "Seleccionar tipo de cliente",
+    "customerTypeRequired": "La selección del tipo de cliente es obligatoria",
+    "erpCode": "Código ERP",
+    "erpCodePlaceholder": "Introducir código ERP (opcional)",
+    "erpCodeMaxLength": "El código ERP debe tener como máximo 20 caracteres",
+    "isApproved": "Aprobado",
+    "isCompleted": "Completado",
+    "isERPIntegrated": "Integrado con ERP"
   },
   "delete": {
-    "action": "Delete",
-    "confirmTitle": "Delete Customer",
-    "confirmMessage": "Are you sure you want to delete {{name}} customer?"
+    "action": "Eliminar",
+    "confirmTitle": "Eliminar Cliente",
+    "confirmMessage": "¿Está seguro de que desea eliminar el cliente {{name}}?"
   },
-  "loading": "Loading...",
-  "noData": "No data",
-  "actions": "Actions",
-  "edit": "Edit",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
+  "loading": "Cargando...",
+  "noData": "Sin datos",
+  "actions": "Acciones",
+  "edit": "Editar",
+  "previous": "Anterior",
+  "next": "Siguiente",
+  "cancel": "Cancelar",
+  "save": "Guardar",
+  "saving": "Guardando...",
   "messages": {
-    "createSuccess": "Customer created successfully",
-    "createError": "Customer could not be created",
-    "updateSuccess": "Customer updated successfully",
-    "updateError": "Customer could not be updated",
-    "deleteSuccess": "Customer deleted successfully",
-    "deleteError": "Customer could not be deleted"
+    "createSuccess": "Cliente creado con éxito",
+    "createError": "No se pudo crear el cliente",
+    "updateSuccess": "Cliente actualizado con éxito",
+    "updateError": "No se pudo actualizar el cliente",
+    "deleteSuccess": "Cliente eliminado con éxito",
+    "deleteError": "No se pudo eliminar el cliente"
   }
 }
