--- a/src/locales/es/customer-select-dialog.json
+++ b/src/locales/es/customer-select-dialog.json
@@ -1,24 +1,24 @@
 {
-  "title": "Select Customer",
-  "description": "Select a tab and choose a customer from the list",
-  "erpCustomers": "ERP Customer",
-  "crmCustomers": "CRM Customers",
-  "allCustomers": "All",
+  "title": "Seleccionar Cliente",
+  "description": "Seleccione una pestaña y elija un cliente de la lista",
+  "erpCustomers": "Cliente ERP",
+  "crmCustomers": "Clientes CRM",
+  "allCustomers": "Todos",
   "erp": "ERP",
   "crm": "CRM",
-  "noErpCustomers": "No ERP customers found",
-  "noCrmCustomers": "No CRM customers found",
-  "noCustomers": "No customers found",
-  "noResults": "No search results found",
-  "searchPlaceholder": "Search by name or code...",
-  "voiceSearch": "Voice search",
-  "loading": "Loading",
+  "noErpCustomers": "No se encontraron clientes ERP",
+  "noCrmCustomers": "No se encontraron clientes CRM",
+  "noCustomers": "No se encontraron clientes",
+  "noResults": "No se encontraron resultados de búsqueda",
+  "searchPlaceholder": "Buscar por nombre o código...",
+  "voiceSearch": "Búsqueda por voz",
+  "loading": "Cargando",
   "table": {
-    "type": "Type",
-    "customerCode": "Customer Code",
-    "customerName": "Customer Name",
-    "phone": "Phone",
-    "city": "City",
-    "email": "Email"
+    "type": "Tipo",
+    "customerCode": "Código de Cliente",
+    "customerName": "Nombre del Cliente",
+    "phone": "Teléfono",
+    "city": "Ciudad",
+    "email": "Correo Electrónico"
   }
 }
