--- a/src/locales/es/customer-type-management.json
+++ b/src/locales/es/customer-type-management.json
@@ -1,56 +1,56 @@
 {
-  "menu": "Customer Type Management",
-  "description": "Manage and edit customer types",
-  "addButton": "Add New Customer Type",
-  "loading": "Loading...",
-  "noData": "No data found",
-  "actions": "Actions",
-  "previous": "Previous",
-  "next": "Next",
+  "menu": "Gestión de Tipos de Cliente",
+  "description": "Gestionar y editar tipos de cliente",
+  "addButton": "Añadir Nuevo Tipo de Cliente",
+  "loading": "Cargando...",
+  "noData": "No se encontraron datos",
+  "actions": "Acciones",
+  "previous": "Anterior",
+  "next": "Siguiente",
   "stats": {
-    "totalCustomerTypes": "Total Customer Types",
-    "activeCustomerTypes": "Active Customer Types",
-    "newThisMonth": "New This Month"
+    "totalCustomerTypes": "Total de Tipos de Cliente",
+    "activeCustomerTypes": "Tipos de Cliente Activos",
+    "newThisMonth": "Nuevos este Mes"
   },
   "table": {
     "id": "ID",
-    "name": "Customer Type Name",
-    "description": "Description",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "updatedDate": "Updated Date",
-    "updatedBy": "Updated By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "name": "Nombre del Tipo de Cliente",
+    "description": "Descripción",
+    "createdDate": "Fecha de Creación",
+    "createdBy": "Creado Por",
+    "updatedDate": "Fecha de Actualización",
+    "updatedBy": "Actualizado Por",
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Página {{current}} / {{total}}"
   },
   "form": {
-    "addCustomerType": "Add New Customer Type",
-    "editCustomerType": "Edit Customer Type",
-    "addDescription": "Enter new customer type information",
-    "editDescription": "Edit customer type information",
-    "name": "Customer Type Name",
-    "namePlaceholder": "Enter customer type name",
-    "nameRequired": "Customer type name is required",
-    "nameMaxLength": "Customer type name must be at most 100 characters",
-    "description": "Description",
-    "descriptionPlaceholder": "Enter description (optional)",
-    "descriptionMaxLength": "Description must be at most 500 characters",
-    "cancel": "Cancel",
-    "save": "Save",
-    "saving": "Saving..."
+    "addCustomerType": "Añadir Nuevo Tipo de Cliente",
+    "editCustomerType": "Editar Tipo de Cliente",
+    "addDescription": "Introducir información del nuevo tipo de cliente",
+    "editDescription": "Editar información del tipo de cliente",
+    "name": "Nombre del Tipo de Cliente",
+    "namePlaceholder": "Introducir nombre del tipo de cliente",
+    "nameRequired": "El nombre del tipo de cliente es obligatorio",
+    "nameMaxLength": "El nombre del tipo de cliente debe tener como máximo 100 caracteres",
+    "description": "Descripción",
+    "descriptionPlaceholder": "Introducir descripción (opcional)",
+    "descriptionMaxLength": "La descripción debe tener como máximo 500 caracteres",
+    "cancel": "Cancelar",
+    "save": "Guardar",
+    "saving": "Guardando..."
   },
   "delete": {
-    "confirmTitle": "Delete Customer Type",
-    "confirmMessage": "Are you sure you want to delete {{name}} customer type?",
-    "confirmButton": "Delete",
-    "deleting": "Deleting..."
+    "confirmTitle": "Eliminar Tipo de Cliente",
+    "confirmMessage": "¿Está seguro de que desea eliminar el tipo de cliente {{name}}?",
+    "confirmButton": "Eliminar",
+    "deleting": "Eliminando..."
   },
   "messages": {
-    "createSuccess": "Customer type created successfully",
-    "createError": "Customer type could not be created",
-    "updateSuccess": "Customer type updated successfully",
-    "updateError": "Customer type could not be updated",
-    "deleteSuccess": "Customer type deleted successfully",
-    "deleteError": "Customer type could not be deleted"
+    "createSuccess": "Tipo de cliente creado con éxito",
+    "createError": "No se pudo crear el tipo de cliente",
+    "updateSuccess": "Tipo de cliente actualizado con éxito",
+    "updateError": "No se pudo actualizar el tipo de cliente",
+    "deleteSuccess": "Tipo de cliente eliminado con éxito",
+    "deleteError": "No se pudo eliminar el tipo de cliente"
   }
 }
