--- a/src/locales/es/dashboard.json
+++ b/src/locales/es/dashboard.json
@@ -1,43 +1,43 @@
 {
-  "title": "Dashboard",
-  "loading": "Loading",
+  "title": "Tablero",
+  "loading": "Cargando",
   "stats": {
-    "totalRevenue": "Total Revenue",
-    "activeOpportunities": "Active Opportunities",
-    "newLeads": "New Leads",
-    "pendingOrders": "Pending Orders"
+    "totalRevenue": "Ingresos Totales",
+    "activeOpportunities": "Oportunidades Activas",
+    "newLeads": "Nuevos Clientes Potenciales",
+    "pendingOrders": "Pedidos Pendientes"
   },
-  "salesAnalysis": "Sales Analysis",
-  "targetVsActual": "Target vs Actual",
-  "latestActivities": "Latest Activities",
-  "viewAll": "View All",
-  "reportDownload": "Download Report",
-  "quickAction": "Quick Action",
+  "salesAnalysis": "Análisis de Ventas",
+  "targetVsActual": "Objetivo vs Real",
+  "latestActivities": "Últimas Actividades",
+  "viewAll": "Ver Todo",
+  "reportDownload": "Descargar Informe",
+  "quickAction": "Acción Rápida",
   "activityType": {
-    "meeting": "Meeting",
-    "call": "Call",
-    "email": "Email"
+    "meeting": "Reunión",
+    "call": "Llamada",
+    "email": "Correo"
   },
   "monthsShort": {
-    "jan": "Jan",
+    "jan": "Ene",
     "feb": "Feb",
     "mar": "Mar",
-    "apr": "Apr",
+    "apr": "Abr",
     "may": "May",
     "jun": "Jun",
     "jul": "Jul",
-    "aug": "Aug",
+    "aug": "Ago",
     "sep": "Sep",
     "oct": "Oct",
     "nov": "Nov",
-    "dec": "Dec"
+    "dec": "Dic"
   },
   "quickStats": {
-    "pendingTasks": "Pending Tasks",
-    "pendingTasksDescription": "12 tasks to complete",
-    "openQuotations": "Open Quotations",
-    "openQuotationsDescription": "5 quotations pending approval",
-    "criticalStock": "Critical Stock",
-    "criticalStockDescription": "3 products below critical level"
+    "pendingTasks": "Tareas Pendientes",
+    "pendingTasksDescription": "12 tareas por completar",
+    "openQuotations": "Cotizaciones Abiertas",
+    "openQuotationsDescription": "5 cotizaciones pendientes de aprobación",
+    "criticalStock": "Stock Crítico",
+    "criticalStockDescription": "3 productos por debajo del nivel crítico"
   }
 }
