--- a/src/locales/es/district-management.json
+++ b/src/locales/es/district-management.json
@@ -31,21 +31,21 @@
     "editDistrict": "Editar Distrito",
     "addDistrict": "Añadir Nuevo Distrito",
     "editDescription": "Editar información del distrito",
-    "addDescription": "Introducir nueva información del distrito",
+    "addDescription": "Ingrese información del nuevo distrito",
     "name": "Nombre del Distrito",
-    "namePlaceholder": "Introducir nombre del distrito",
+    "namePlaceholder": "Ingrese nombre del distrito",
     "city": "Ciudad",
     "selectCity": "Seleccionar ciudad",
     "erpCode": "Código ERP",
-    "erpCodePlaceholder": "Introducir código ERP (opcional)",
+    "erpCodePlaceholder": "Ingrese código ERP (opcional)",
     "nameRequired": "El nombre del distrito es obligatorio",
     "nameMaxLength": "El nombre del distrito no puede exceder los 100 caracteres",
     "erpCodeMaxLength": "El código ERP no puede exceder los 10 caracteres",
     "cityRequired": "La selección de ciudad es obligatoria"
   },
   "stats": {
-    "totalDistricts": "Total Distritos",
+    "totalDistricts": "Distritos Totales",
     "activeDistricts": "Distritos Activos",
-    "newThisMonth": "Nuevos Este Mes"
+    "newThisMonth": "Nuevos este Mes"
   }
 }
