--- a/src/locales/es/erp-customer-management.json
+++ b/src/locales/es/erp-customer-management.json
@@ -1,22 +1,22 @@
 {
-  "menu": "ERP Customer",
-  "description": "Customer list from ERP system",
-  "loading": "Loading...",
-  "noData": "No customers found",
+  "menu": "Clientes ERP",
+  "description": "Lista de clientes del sistema ERP",
+  "loading": "Cargando...",
+  "noData": "No se encontraron clientes",
   "table": {
-    "branchCode": "Branch Code",
-    "businessUnitCode": "Business Unit Code",
-    "customerCode": "Customer Code",
-    "customerName": "Customer Name",
-    "phone": "Phone",
-    "city": "City",
-    "district": "District",
-    "address": "Address",
-    "countryCode": "Country Code",
-    "email": "Email",
-    "website": "Website",
-    "taxNumber": "Tax Number",
-    "taxOffice": "Tax Office",
-    "tcknNumber": "TCKN Number"
+    "branchCode": "Código de Sucursal",
+    "businessUnitCode": "Código de Unidad de Negocio",
+    "customerCode": "Código de Cliente",
+    "customerName": "Nombre del Cliente",
+    "phone": "Teléfono",
+    "city": "Ciudad",
+    "district": "Distrito",
+    "address": "Dirección",
+    "countryCode": "Código de País",
+    "email": "Correo Electrónico",
+    "website": "Sitio Web",
+    "taxNumber": "Número de Identificación Fiscal",
+    "taxOffice": "Oficina de Impuestos",
+    "tcknNumber": "Número TCKN"
   }
 }
