--- a/src/locales/es/quotation-line-management.json
+++ b/src/locales/es/quotation-line-management.json
@@ -1,132 +1,132 @@
 {
-  "title": "Quotation Line Management",
-  "description": "Manage and edit quotation lines",
-  "create": "New Quotation Line",
-  "createDescription": "Enter new quotation line information",
-  "edit": "Edit Quotation Line",
-  "editDescription": "Edit quotation line information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Quotation Line",
-  "quotationId": "Quotation ID",
-  "productId": "Product ID",
-  "productCode": "Product Code",
-  "productName": "Product Name",
-  "quantity": "Quantity",
-  "unitPrice": "Unit Price",
-  "discountRate1": "Discount Rate 1",
-  "discountAmount1": "Discount Amount 1",
-  "discountRate2": "Discount Rate 2",
-  "discountAmount2": "Discount Amount 2",
-  "discountRate3": "Discount Rate 3",
-  "discountAmount3": "Discount Amount 3",
-  "vatRate": "VAT Rate",
-  "vatAmount": "VAT Amount",
-  "lineTotal": "Line Total (Excl. VAT)",
-  "lineGrandTotal": "Line Total (Incl. VAT)",
-  "description": "Description",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "filterByQuotationId": "Filter by Quotation",
-  "filterByProductCode": "Filter by Product Code",
-  "filterByProductName": "Filter by Product Name",
-  "filterByQuantityRange": "Filter by Quantity Range",
-  "filterByUnitPriceRange": "Filter by Unit Price Range",
-  "filterByLineTotalRange": "Filter by Line Total Range",
-  "filterByLineGrandTotalRange": "Filter by Line Grand Total Range",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this quotation line?",
-  "createSuccess": "Quotation line created successfully",
-  "updateSuccess": "Quotation line updated successfully",
-  "deleteSuccess": "Quotation line deleted successfully",
-  "createError": "An error occurred while creating quotation line",
-  "updateError": "An error occurred while updating quotation line",
-  "deleteError": "An error occurred while deleting quotation line",
-  "quotationIdRequired": "Quotation ID is required",
-  "productIdRequired": "Product selection is required",
-  "productNameRequired": "Product name is required",
-  "productNameMaxLength": "Product name must be at most 250 characters",
-  "productCodeMaxLength": "Product code must be at most 100 characters",
-  "quantityRequired": "Quantity is required",
-  "quantityMin": "Quantity must be 0 or greater",
-  "unitPriceRequired": "Unit price is required",
-  "unitPriceMin": "Unit price must be 0 or greater",
-  "discountRate1Range": "Discount rate 1 must be between 0 and 100",
-  "discountRate2Range": "Discount rate 2 must be between 0 and 100",
-  "discountRate3Range": "Discount rate 3 must be between 0 and 100",
-  "discountAmount1Min": "Discount amount 1 must be 0 or greater",
-  "discountAmount2Min": "Discount amount 2 must be 0 or greater",
-  "discountAmount3Min": "Discount amount 3 must be 0 or greater",
-  "vatRateRequired": "VAT rate is required",
-  "vatRateRange": "VAT rate must be between 0 and 100",
-  "descriptionMaxLength": "Description must be at most 250 characters",
-  "selectQuotation": "Select Quotation",
-  "selectProduct": "Select Product",
-  "enterProductCode": "Enter Product Code",
-  "enterProductName": "Enter Product Name",
-  "enterQuantity": "Enter Quantity",
-  "enterUnitPrice": "Enter Unit Price",
-  "enterDiscountRate1": "Enter Discount Rate 1 (0-100, Optional)",
-  "enterDiscountAmount1": "Enter Discount Amount 1 (Optional)",
-  "enterDiscountRate2": "Enter Discount Rate 2 (0-100, Optional)",
-  "enterDiscountAmount2": "Enter Discount Amount 2 (Optional)",
-  "enterDiscountRate3": "Enter Discount Rate 3 (0-100, Optional)",
-  "enterDiscountAmount3": "Enter Discount Amount 3 (Optional)",
-  "enterVatRate": "Enter VAT Rate (0-100)",
-  "enterDescription": "Enter Description (Optional)",
-  "calculation": "Calculation",
-  "calculationBreakdown": "Calculation Breakdown",
+  "title": "Gestión de Líneas de Cotización",
+  "description": "Gestionar y editar líneas de cotización",
+  "create": "Nueva Línea de Cotización",
+  "createDescription": "Ingresar información de nueva línea de cotización",
+  "edit": "Editar Línea de Cotización",
+  "editDescription": "Editar información de línea de cotización",
+  "delete": "Eliminar",
+  "deleteTitle": "Eliminar Línea de Cotización",
+  "quotationId": "ID de Cotización",
+  "productId": "ID de Producto",
+  "productCode": "Código de Producto",
+  "productName": "Nombre de Producto",
+  "quantity": "Cantidad",
+  "unitPrice": "Precio Unitario",
+  "discountRate1": "Tasa de Descuento 1",
+  "discountAmount1": "Monto de Descuento 1",
+  "discountRate2": "Tasa de Descuento 2",
+  "discountAmount2": "Monto de Descuento 2",
+  "discountRate3": "Tasa de Descuento 3",
+  "discountAmount3": "Monto de Descuento 3",
+  "vatRate": "Tasa de IVA",
+  "vatAmount": "Monto de IVA",
+  "lineTotal": "Total de Línea (Excl. IVA)",
+  "lineGrandTotal": "Total de Línea (Incl. IVA)",
+  "description": "Descripción",
+  "createdDate": "Fecha de Creación",
+  "updatedDate": "Fecha de Actualización",
+  "actions": "Acciones",
+  "search": "Buscar",
+  "filterByQuotationId": "Filtrar por Cotización",
+  "filterByProductCode": "Filtrar por Código de Producto",
+  "filterByProductName": "Filtrar por Nombre de Producto",
+  "filterByQuantityRange": "Filtrar por Rango de Cantidad",
+  "filterByUnitPriceRange": "Filtrar por Rango de Precio Unitario",
+  "filterByLineTotalRange": "Filtrar por Rango de Total de Línea",
+  "filterByLineGrandTotalRange": "Filtrar por Rango de Total General de Línea",
+  "noData": "No se encontraron datos",
+  "confirmDelete": "¿Está seguro de que desea eliminar esta línea de cotización?",
+  "createSuccess": "Línea de cotización creada exitosamente",
+  "updateSuccess": "Línea de cotización actualizada exitosamente",
+  "deleteSuccess": "Línea de cotización eliminada exitosamente",
+  "createError": "Ocurrió un error al crear la línea de cotización",
+  "updateError": "Ocurrió un error al actualizar la línea de cotización",
+  "deleteError": "Ocurrió un error al eliminar la línea de cotización",
+  "quotationIdRequired": "El ID de cotización es obligatorio",
+  "productIdRequired": "La selección de producto es obligatoria",
+  "productNameRequired": "El nombre del producto es obligatorio",
+  "productNameMaxLength": "El nombre del producto debe tener como máximo 250 caracteres",
+  "productCodeMaxLength": "El código del producto debe tener como máximo 100 caracteres",
+  "quantityRequired": "La cantidad es obligatoria",
+  "quantityMin": "La cantidad debe ser 0 o mayor",
+  "unitPriceRequired": "El precio unitario es obligatorio",
+  "unitPriceMin": "El precio unitario debe ser 0 o mayor",
+  "discountRate1Range": "La tasa de descuento 1 debe estar entre 0 y 100",
+  "discountRate2Range": "La tasa de descuento 2 debe estar entre 0 y 100",
+  "discountRate3Range": "La tasa de descuento 3 debe estar entre 0 y 100",
+  "discountAmount1Min": "El monto de descuento 1 debe ser 0 o mayor",
+  "discountAmount2Min": "El monto de descuento 2 debe ser 0 o mayor",
+  "discountAmount3Min": "El monto de descuento 3 debe ser 0 o mayor",
+  "vatRateRequired": "La tasa de IVA es obligatoria",
+  "vatRateRange": "La tasa de IVA debe estar entre 0 y 100",
+  "descriptionMaxLength": "La descripción debe tener como máximo 250 caracteres",
+  "selectQuotation": "Seleccionar Cotización",
+  "selectProduct": "Seleccionar Producto",
+  "enterProductCode": "Ingresar Código de Producto",
+  "enterProductName": "Ingresar Nombre de Producto",
+  "enterQuantity": "Ingresar Cantidad",
+  "enterUnitPrice": "Ingresar Precio Unitario",
+  "enterDiscountRate1": "Ingresar Tasa de Descuento 1 (0-100, Opcional)",
+  "enterDiscountAmount1": "Ingresar Monto de Descuento 1 (Opcional)",
+  "enterDiscountRate2": "Ingresar Tasa de Descuento 2 (0-100, Opcional)",
+  "enterDiscountAmount2": "Ingresar Monto de Descuento 2 (Opcional)",
+  "enterDiscountRate3": "Ingresar Tasa de Descuento 3 (0-100, Opcional)",
+  "enterDiscountAmount3": "Ingresar Monto de Descuento 3 (Opcional)",
+  "enterVatRate": "Ingresar Tasa de IVA (0-100)",
+  "enterDescription": "Ingresar Descripción (Opcional)",
+  "calculation": "Cálculo",
+  "calculationBreakdown": "Desglose de Cálculo",
   "subtotal": "Subtotal",
-  "afterDiscount1": "After Discount 1",
-  "afterDiscount2": "After Discount 2",
-  "afterDiscount3": "After Discount 3",
-  "vatBreakdown": "VAT Breakdown",
-  "grandTotal": "Grand Total",
-  "loading": "Loading...",
-  "save": "Save",
-  "cancel": "Cancel",
-  "close": "Close",
-  "clearFilters": "Clear Filters",
-  "applyFilters": "Apply Filters",
-  "minQuantity": "Min Quantity",
-  "maxQuantity": "Max Quantity",
-  "minUnitPrice": "Min Unit Price",
-  "maxUnitPrice": "Max Unit Price",
-  "minLineTotal": "Min Line Total",
-  "maxLineTotal": "Max Line Total",
-  "minLineGrandTotal": "Min Line Grand Total",
-  "maxLineGrandTotal": "Max Line Grand Total",
+  "afterDiscount1": "Después del Descuento 1",
+  "afterDiscount2": "Después del Descuento 2",
+  "afterDiscount3": "Después del Descuento 3",
+  "vatBreakdown": "Desglose de IVA",
+  "grandTotal": "Gran Total",
+  "loading": "Cargando...",
+  "save": "Guardar",
+  "cancel": "Cancelar",
+  "close": "Cerrar",
+  "clearFilters": "Limpiar Filtros",
+  "applyFilters": "Aplicar Filtros",
+  "minQuantity": "Cantidad Mín",
+  "maxQuantity": "Cantidad Máx",
+  "minUnitPrice": "Precio Unitario Mín",
+  "maxUnitPrice": "Precio Unitario Máx",
+  "minLineTotal": "Total de Línea Mín",
+  "maxLineTotal": "Total de Línea Máx",
+  "minLineGrandTotal": "Total General de Línea Mín",
+  "maxLineGrandTotal": "Total General de Línea Máx",
   "percentage": "%",
-  "getByQuotation": "Get by Quotation",
-  "allLines": "All Lines",
-  "linesForQuotation": "Quotation Lines",
-  "noLinesForQuotation": "No lines found for this quotation",
-  "calculationPreview": "Calculation Preview",
-  "baseAmount": "Base Amount",
-  "discountsApplied": "Discounts Applied",
-  "vatApplied": "VAT Applied",
-  "finalAmount": "Final Amount",
+  "getByQuotation": "Obtener por Cotización",
+  "allLines": "Todas las Líneas",
+  "linesForQuotation": "Líneas de Cotización",
+  "noLinesForQuotation": "No se encontraron líneas para esta cotización",
+  "calculationPreview": "Vista Previa de Cálculo",
+  "baseAmount": "Monto Base",
+  "discountsApplied": "Descuentos Aplicados",
+  "vatApplied": "IVA Aplicado",
+  "finalAmount": "Monto Final",
   "table": {
     "id": "ID",
-    "quotationId": "Quotation ID",
-    "productCode": "Product Code",
-    "productName": "Product Name",
-    "quantity": "Quantity",
-    "unitPrice": "Unit Price",
-    "discountRate1": "Discount Rate 1",
-    "discountAmount1": "Discount Amount 1",
-    "discountRate2": "Discount Rate 2",
-    "discountAmount2": "Discount Amount 2",
-    "discountRate3": "Discount Rate 3",
-    "discountAmount3": "Discount Amount 3",
-    "vatRate": "VAT Rate",
-    "vatAmount": "VAT Amount",
-    "lineTotal": "Line Total (Excl. VAT)",
-    "lineGrandTotal": "Line Total (Incl. VAT)",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
+    "quotationId": "ID de Cotización",
+    "productCode": "Código de Producto",
+    "productName": "Nombre de Producto",
+    "quantity": "Cantidad",
+    "unitPrice": "Precio Unitario",
+    "discountRate1": "Tasa de Descuento 1",
+    "discountAmount1": "Monto de Descuento 1",
+    "discountRate2": "Tasa de Descuento 2",
+    "discountAmount2": "Monto de Descuento 2",
+    "discountRate3": "Tasa de Descuento 3",
+    "discountAmount3": "Monto de Descuento 3",
+    "vatRate": "Tasa de IVA",
+    "vatAmount": "Monto de IVA",
+    "lineTotal": "Total de Línea (Excl. IVA)",
+    "lineGrandTotal": "Total de Línea (Incl. IVA)",
+    "createdDate": "Fecha de Creación",
+    "updatedDate": "Fecha de Actualización",
+    "showing": "Mostrando {{from}}-{{to}} de {{total}}",
+    "page": "Página {{current}} de {{total}}"
   }
 }
