--- a/src/locales/es/shipping-address-management.json
+++ b/src/locales/es/shipping-address-management.json
@@ -1,77 +1,77 @@
 {
-  "title": "Shipping Address Management",
-  "create": "New Shipping Address",
-  "edit": "Edit Shipping Address",
-  "delete": "Delete",
-  "address": "Address",
-  "postalCode": "Postal Code",
-  "contactPerson": "Contact Person",
-  "phone": "Phone",
-  "notes": "Notes",
-  "customerId": "Customer",
-  "countryId": "Country",
-  "cityId": "City",
-  "districtId": "District",
-  "customerName": "Customer Name",
-  "countryName": "Country Name",
-  "cityName": "City Name",
-  "districtName": "District Name",
-  "location": "Location",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "refresh": "Refresh",
-  "noData": "No data found",
-  "confirmDelete": "Delete Shipping Address",
-  "confirmDeleteMessage": "Are you sure you want to delete this shipping address? This action cannot be undone.",
-  "createSuccess": "Shipping address created successfully",
-  "updateSuccess": "Shipping address updated successfully",
-  "deleteSuccess": "Shipping address deleted successfully",
-  "createError": "An error occurred while creating shipping address",
-  "updateError": "An error occurred while updating shipping address",
-  "deleteError": "An error occurred while deleting shipping address",
-  "addressRequired": "Address is required",
-  "addressMaxLength": "Address can be at most 150 characters",
-  "postalCodeMaxLength": "Postal code can be at most 20 characters",
-  "contactPersonMaxLength": "Contact person can be at most 100 characters",
-  "phoneMaxLength": "Phone can be at most 20 characters",
-  "notesMaxLength": "Notes can be at most 100 characters",
-  "customerIdRequired": "Customer selection is required",
-  "enterAddress": "Enter Address",
-  "enterPostalCode": "Enter Postal Code",
-  "enterContactPerson": "Enter Contact Person",
-  "enterPhone": "Enter Phone",
-  "enterNotes": "Enter Notes",
-  "selectCustomer": "Select Customer",
-  "selectCountry": "Select Country",
-  "selectCity": "Select City",
-  "selectDistrict": "Select District",
-  "noCountrySelected": "No country selected",
-  "noCitySelected": "No city selected",
-  "noDistrictSelected": "No district selected",
-  "selectCountryFirst": "Select country first",
-  "selectCityFirst": "Select city first",
-  "createDescription": "Enter new shipping address information",
-  "editDescription": "Edit shipping address information",
+  "title": "Gestión de Direcciones de Envío",
+  "create": "Nueva Dirección de Envío",
+  "edit": "Editar Dirección de Envío",
+  "delete": "Eliminar",
+  "address": "Dirección",
+  "postalCode": "Código Postal",
+  "contactPerson": "Persona de Contacto",
+  "phone": "Teléfono",
+  "notes": "Notas",
+  "customerId": "Cliente",
+  "countryId": "País",
+  "cityId": "Ciudad",
+  "districtId": "Distrito",
+  "customerName": "Nombre del Cliente",
+  "countryName": "Nombre del País",
+  "cityName": "Nombre de la Ciudad",
+  "districtName": "Nombre del Distrito",
+  "location": "Ubicación",
+  "createdDate": "Fecha de Creación",
+  "updatedDate": "Fecha de Actualización",
+  "actions": "Acciones",
+  "search": "Buscar",
+  "refresh": "Actualizar",
+  "noData": "No se encontraron datos",
+  "confirmDelete": "Eliminar Dirección de Envío",
+  "confirmDeleteMessage": "¿Está seguro de que desea eliminar esta dirección de envío? Esta acción no se puede deshacer.",
+  "createSuccess": "Dirección de envío creada con éxito",
+  "updateSuccess": "Dirección de envío actualizada con éxito",
+  "deleteSuccess": "Dirección de envío eliminada con éxito",
+  "createError": "Ocurrió un error al crear la dirección de envío",
+  "updateError": "Ocurrió un error al actualizar la dirección de envío",
+  "deleteError": "Ocurrió un error al eliminar la dirección de envío",
+  "addressRequired": "La dirección es obligatoria",
+  "addressMaxLength": "La dirección puede tener como máximo 150 caracteres",
+  "postalCodeMaxLength": "El código postal puede tener como máximo 20 caracteres",
+  "contactPersonMaxLength": "La persona de contacto puede tener como máximo 100 caracteres",
+  "phoneMaxLength": "El teléfono puede tener como máximo 20 caracteres",
+  "notesMaxLength": "Las notas pueden tener como máximo 100 caracteres",
+  "customerIdRequired": "La selección del cliente es obligatoria",
+  "enterAddress": "Introducir Dirección",
+  "enterPostalCode": "Introducir Código Postal",
+  "enterContactPerson": "Introducir Persona de Contacto",
+  "enterPhone": "Introducir Teléfono",
+  "enterNotes": "Introducir Notas",
+  "selectCustomer": "Seleccionar Cliente",
+  "selectCountry": "Seleccionar País",
+  "selectCity": "Seleccionar Ciudad",
+  "selectDistrict": "Seleccionar Distrito",
+  "noCountrySelected": "Ningún país seleccionado",
+  "noCitySelected": "Ninguna ciudad seleccionada",
+  "noDistrictSelected": "Ningún distrito seleccionado",
+  "selectCountryFirst": "Seleccione el país primero",
+  "selectCityFirst": "Seleccione la ciudad primero",
+  "createDescription": "Introducir información de la nueva dirección de envío",
+  "editDescription": "Editar información de la dirección de envío",
   "table": {
     "id": "ID",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}",
-    "customerName": "Customer Name",
-    "address": "Address",
-    "postalCode": "Postal Code",
-    "contactPerson": "Contact Person",
-    "phone": "Phone",
-    "location": "Location",
-    "createdDate": "Created Date",
-    "actions": "Actions"
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Página {{current}} / {{total}}",
+    "customerName": "Nombre del Cliente",
+    "address": "Dirección",
+    "postalCode": "Código Postal",
+    "contactPerson": "Persona de Contacto",
+    "phone": "Teléfono",
+    "location": "Ubicación",
+    "createdDate": "Fecha de Creación",
+    "actions": "Acciones"
   },
-  "loading": "Loading...",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "deleting": "Deleting..."
+  "loading": "Cargando...",
+  "previous": "Anterior",
+  "next": "Siguiente",
+  "cancel": "Cancelar",
+  "save": "Guardar",
+  "saving": "Guardando...",
+  "deleting": "Eliminando..."
 }
