--- a/src/locales/es/activity-management.json
+++ b/src/locales/es/activity-management.json
@@ -1,140 +1,140 @@
 {
-  "title": "Activity Management",
-  "description": "Manage and edit activities",
-  "create": "New Activity",
-  "createDescription": "Enter new activity information",
-  "edit": "Edit Activity",
-  "editButton": "Edit",
-  "editDescription": "Edit activity information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Activity",
-  "subject": "Subject",
-  "activityType": "Activity Type",
-  "potentialCustomerId": "Potential Customer",
-  "potentialCustomer": "Customer",
-  "customer": "Customer",
-  "selectCustomer": "Select Customer",
-  "erpCustomerCode": "ERP Customer Code",
-  "product": "Stock/Product",
-  "selectProduct": "Select Stock/Product",
-  "status": "Status",
-  "isCompleted": "Completed",
-  "priority": "Priority",
-  "contactId": "Contact",
-  "contact": "Contact",
-  "assignedUserId": "Assigned User",
-  "assignedUser": "Assigned To",
-  "activityDate": "Activity Date",
-  "activityDateRequired": "Activity date is required",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "filterByActivityType": "Filter by Activity Type",
-  "filterByStatus": "Filter by Status",
-  "filterByPriority": "Filter by Priority",
-  "filterByPotentialCustomer": "Filter by Customer",
-  "filterByContact": "Filter by Contact",
-  "filterByAssignedUser": "Filter by Assigned User",
-  "filterByIsCompleted": "Filter by Completion Status",
-  "filterByCreatedDateRange": "Filter by Created Date Range",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this activity?",
-  "createSuccess": "Activity created successfully",
-  "updateSuccess": "Activity updated successfully",
-  "deleteSuccess": "Activity deleted successfully",
-  "createError": "An error occurred while creating activity",
-  "updateError": "An error occurred while updating activity",
-  "deleteError": "An error occurred while deleting activity",
-  "subjectRequired": "Subject is required",
-  "subjectMaxLength": "Subject must be at most 100 characters",
-  "descriptionMaxLength": "Description must be at most 500 characters",
-  "activityTypeRequired": "Activity type selection is required",
-  "activityTypeMaxLength": "Activity type must be at most 50 characters",
-  "statusRequired": "Status selection is required",
-  "statusMaxLength": "Status must be at most 50 characters",
-  "priorityMaxLength": "Priority must be at most 50 characters",
-  "enterSubject": "Enter Subject",
-  "enterDescription": "Enter Description (Optional)",
-  "selectActivityType": "Select Activity Type",
-  "selectPotentialCustomer": "Select Potential Customer (Optional)",
-  "enterErpCustomerCode": "Enter ERP Customer Code (Optional)",
-  "selectStatus": "Select Status",
-  "selectPriority": "Select Priority (Optional)",
-  "selectContact": "Select Contact (Optional)",
-  "selectAssignedUser": "Select Assigned User (Optional)",
-  "noCustomerSelected": "No customer selected",
-  "noContactSelected": "No contact selected",
-  "noUserSelected": "No user selected",
-  "noPrioritySelected": "No priority selected",
-  "selectCustomerFirst": "Select customer first",
-  "loading": "Loading...",
-  "save": "Save",
-  "saving": "Saving...",
-  "cancel": "Cancel",
-  "previous": "Previous",
-  "next": "Next",
+  "title": "Gestión de Actividades",
+  "description": "Gestionar y editar actividades",
+  "create": "Nueva Actividad",
+  "createDescription": "Introducir información de la nueva actividad",
+  "edit": "Editar Actividad",
+  "editButton": "Editar",
+  "editDescription": "Editar información de la actividad",
+  "delete": "Eliminar",
+  "deleteTitle": "Eliminar Actividad",
+  "subject": "Asunto",
+  "activityType": "Tipo de Actividad",
+  "potentialCustomerId": "Cliente Potencial",
+  "potentialCustomer": "Cliente",
+  "customer": "Cliente",
+  "selectCustomer": "Seleccionar Cliente",
+  "erpCustomerCode": "Código de Cliente ERP",
+  "product": "Stock/Producto",
+  "selectProduct": "Seleccionar Stock/Producto",
+  "status": "Estado",
+  "isCompleted": "Completado",
+  "priority": "Prioridad",
+  "contactId": "Contacto",
+  "contact": "Contacto",
+  "assignedUserId": "Usuario Asignado",
+  "assignedUser": "Asignado A",
+  "activityDate": "Fecha de Actividad",
+  "activityDateRequired": "La fecha de actividad es obligatoria",
+  "createdDate": "Fecha de Creación",
+  "updatedDate": "Fecha de Actualización",
+  "actions": "Acciones",
+  "search": "Buscar",
+  "filterByActivityType": "Filtrar por Tipo de Actividad",
+  "filterByStatus": "Filtrar por Estado",
+  "filterByPriority": "Filtrar por Prioridad",
+  "filterByPotentialCustomer": "Filtrar por Cliente",
+  "filterByContact": "Filtrar por Contacto",
+  "filterByAssignedUser": "Filtrar por Usuario Asignado",
+  "filterByIsCompleted": "Filtrar por Estado de Finalización",
+  "filterByCreatedDateRange": "Filtrar por Rango de Fecha de Creación",
+  "noData": "No se encontraron datos",
+  "confirmDelete": "¿Está seguro de que desea eliminar esta actividad?",
+  "createSuccess": "Actividad creada con éxito",
+  "updateSuccess": "Actividad actualizada con éxito",
+  "deleteSuccess": "Actividad eliminada con éxito",
+  "createError": "Ocurrió un error al crear la actividad",
+  "updateError": "Ocurrió un error al actualizar la actividad",
+  "deleteError": "Ocurrió un error al eliminar la actividad",
+  "subjectRequired": "El asunto es obligatorio",
+  "subjectMaxLength": "El asunto debe tener como máximo 100 caracteres",
+  "descriptionMaxLength": "La descripción debe tener como máximo 500 caracteres",
+  "activityTypeRequired": "La selección del tipo de actividad es obligatoria",
+  "activityTypeMaxLength": "El tipo de actividad debe tener como máximo 50 caracteres",
+  "statusRequired": "La selección del estado es obligatoria",
+  "statusMaxLength": "El estado debe tener como máximo 50 caracteres",
+  "priorityMaxLength": "La prioridad debe tener como máximo 50 caracteres",
+  "enterSubject": "Introducir Asunto",
+  "enterDescription": "Introducir Descripción (Opcional)",
+  "selectActivityType": "Seleccionar Tipo de Actividad",
+  "selectPotentialCustomer": "Seleccionar Cliente Potencial (Opcional)",
+  "enterErpCustomerCode": "Introducir Código de Cliente ERP (Opcional)",
+  "selectStatus": "Seleccionar Estado",
+  "selectPriority": "Seleccionar Prioridad (Opcional)",
+  "selectContact": "Seleccionar Contacto (Opcional)",
+  "selectAssignedUser": "Seleccionar Usuario Asignado (Opcional)",
+  "noCustomerSelected": "Ningún cliente seleccionado",
+  "noContactSelected": "Ningún contacto seleccionado",
+  "noUserSelected": "Ningún usuario seleccionado",
+  "noPrioritySelected": "Ninguna prioridad seleccionada",
+  "selectCustomerFirst": "Seleccionar cliente primero",
+  "loading": "Cargando...",
+  "save": "Guardar",
+  "saving": "Guardando...",
+  "cancel": "Cancelar",
+  "previous": "Anterior",
+  "next": "Siguiente",
   "productDisplay": "{{code}} - {{name}}",
   "erpLabel": "ERP: {{code}}",
-  "close": "Close",
-  "clearFilters": "Clear Filters",
-  "applyFilters": "Apply Filters",
-  "markAsCompleted": "Mark as Completed",
-  "markAsInProgress": "Mark as In Progress",
-  "cancelActivity": "Cancel",
-  "confirmMarkAsCompleted": "Are you sure you want to mark this activity as completed?",
-  "confirmMarkAsInProgress": "Are you sure you want to mark this activity as in progress?",
-  "confirmCancel": "Are you sure you want to cancel this activity?",
-  "markAsCompletedSuccess": "Activity marked as completed",
-  "markAsInProgressSuccess": "Activity marked as in progress",
-  "cancelSuccess": "Activity canceled",
-  "statusChangeWarning": "Are you sure you want to change the status?",
-  "autoCompleteStatus": "Will be automatically marked when status is set to 'Completed'",
-  "activityTypeCall": "Call",
-  "activityTypeMeeting": "Meeting",
-  "activityTypeEmail": "Email",
-  "activityTypeTask": "Task",
-  "activityTypeNote": "Note",
-  "activityTypeEvent": "Event",
-  "statusScheduled": "Scheduled",
-  "statusInProgress": "In Progress",
-  "statusCompleted": "Completed",
-  "statusCanceled": "Canceled",
-  "statusPostponed": "Postponed",
-  "priorityLow": "Low",
-  "priorityMedium": "Medium",
-  "priorityHigh": "High",
-  "allActivityTypes": "All Activity Types",
-  "allStatuses": "All Statuses",
-  "allPriorities": "All Priorities",
-  "completedActivities": "Completed Activities",
-  "pendingActivities": "Pending Activities",
-  "highPriorityActivities": "High Priority Activities",
-  "noCompletedActivities": "No completed activities found",
-  "noPendingActivities": "No pending activities found",
-  "activityDetails": "Activity Details",
-  "customerInformation": "Customer Information",
-  "contactInformation": "Contact Information",
-  "assignedUserInformation": "Assigned User Information",
-  "calendarView": "Calendar View",
-  "kanbanView": "Kanban View",
-  "tableView": "Table View",
-  "switchToCalendar": "Switch to Calendar View",
-  "switchToKanban": "Switch to Kanban View",
-  "switchToTable": "Switch to Table View",
+  "close": "Cerrar",
+  "clearFilters": "Borrar Filtros",
+  "applyFilters": "Aplicar Filtros",
+  "markAsCompleted": "Marcar como Completado",
+  "markAsInProgress": "Marcar como En Progreso",
+  "cancelActivity": "Cancelar",
+  "confirmMarkAsCompleted": "¿Está seguro de que desea marcar esta actividad como completada?",
+  "confirmMarkAsInProgress": "¿Está seguro de que desea marcar esta actividad como en progreso?",
+  "confirmCancel": "¿Está seguro de que desea cancelar esta actividad?",
+  "markAsCompletedSuccess": "Actividad marcada como completada",
+  "markAsInProgressSuccess": "Actividad marcada como en progreso",
+  "cancelSuccess": "Actividad cancelada",
+  "statusChangeWarning": "¿Está seguro de que desea cambiar el estado?",
+  "autoCompleteStatus": "Se marcará automáticamente cuando el estado se establezca en 'Completado'",
+  "activityTypeCall": "Llamada",
+  "activityTypeMeeting": "Reunión",
+  "activityTypeEmail": "Correo Electrónico",
+  "activityTypeTask": "Tarea",
+  "activityTypeNote": "Nota",
+  "activityTypeEvent": "Evento",
+  "statusScheduled": "Programado",
+  "statusInProgress": "En Progreso",
+  "statusCompleted": "Completado",
+  "statusCanceled": "Cancelado",
+  "statusPostponed": "Pospuesto",
+  "priorityLow": "Baja",
+  "priorityMedium": "Media",
+  "priorityHigh": "Alta",
+  "allActivityTypes": "Todos los Tipos de Actividad",
+  "allStatuses": "Todos los Estados",
+  "allPriorities": "Todas las Prioridades",
+  "completedActivities": "Actividades Completadas",
+  "pendingActivities": "Actividades Pendientes",
+  "highPriorityActivities": "Actividades de Alta Prioridad",
+  "noCompletedActivities": "No se encontraron actividades completadas",
+  "noPendingActivities": "No se encontraron actividades pendientes",
+  "activityDetails": "Detalles de la Actividad",
+  "customerInformation": "Información del Cliente",
+  "contactInformation": "Información del Contacto",
+  "assignedUserInformation": "Información del Usuario Asignado",
+  "calendarView": "Vista de Calendario",
+  "kanbanView": "Vista Kanban",
+  "tableView": "Vista de Tabla",
+  "switchToCalendar": "Cambiar a Vista de Calendario",
+  "switchToKanban": "Cambiar a Vista Kanban",
+  "switchToTable": "Cambiar a Vista de Tabla",
   "table": {
     "id": "ID",
-    "subject": "Subject",
-    "activityType": "Activity Type",
-    "status": "Status",
-    "priority": "Priority",
-    "potentialCustomer": "Customer",
-    "contact": "Contact",
-    "assignedUser": "Assigned To",
-    "isCompleted": "Completed",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
+    "subject": "Asunto",
+    "activityType": "Tipo de Actividad",
+    "status": "Estado",
+    "priority": "Prioridad",
+    "potentialCustomer": "Cliente",
+    "contact": "Contacto",
+    "assignedUser": "Asignado A",
+    "isCompleted": "Completado",
+    "createdDate": "Fecha de Creación",
+    "updatedDate": "Fecha de Actualización",
+    "showing": "Mostrando {{from}}-{{to}} de {{total}}",
+    "page": "Página {{current}} de {{total}}"
   }
 }
