--- a/src/locales/es/activity-type.json
+++ b/src/locales/es/activity-type.json
@@ -1,54 +1,54 @@
 {
-  "menu": "Activity Type Management",
-  "description": "Manage and edit activity types",
-  "addButton": "Add New Activity Type",
-  "loading": "Loading...",
-  "noData": "No data found",
-  "actions": "Actions",
-  "edit": "Edit",
-  "deleteButton": "Delete",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "previous": "Previous",
-  "next": "Next",
+  "menu": "Gestión de Tipos de Actividad",
+  "description": "Gestionar y editar tipos de actividad",
+  "addButton": "Añadir Nuevo Tipo de Actividad",
+  "loading": "Cargando...",
+  "noData": "No se encontraron datos",
+  "actions": "Acciones",
+  "edit": "Editar",
+  "deleteButton": "Eliminar",
+  "cancel": "Cancelar",
+  "save": "Guardar",
+  "saving": "Guardando...",
+  "previous": "Anterior",
+  "next": "Siguiente",
   "form": {
-    "addTitle": "Add New Activity Type",
-    "editTitle": "Edit Activity Type",
-    "addDescription": "Enter new activity type information",
-    "editDescription": "Edit activity type information",
-    "name": "Activity Type Name",
-    "namePlaceholder": "Enter activity type name",
-    "nameRequired": "Activity type name is required",
-    "nameMaxLength": "Activity type name can be at most 100 characters",
-    "description": "Description",
-    "descriptionPlaceholder": "Enter description (optional)",
-    "descriptionMaxLength": "Description can be at most 500 characters"
+    "addTitle": "Añadir Nuevo Tipo de Actividad",
+    "editTitle": "Editar Tipo de Actividad",
+    "addDescription": "Introducir información del nuevo tipo de actividad",
+    "editDescription": "Editar información del tipo de actividad",
+    "name": "Nombre del Tipo de Actividad",
+    "namePlaceholder": "Introducir nombre del tipo de actividad",
+    "nameRequired": "El nombre del tipo de actividad es obligatorio",
+    "nameMaxLength": "El nombre del tipo de actividad debe tener como máximo 100 caracteres",
+    "description": "Descripción",
+    "descriptionPlaceholder": "Introducir descripción (opcional)",
+    "descriptionMaxLength": "La descripción debe tener como máximo 500 caracteres"
   },
   "table": {
     "id": "ID",
-    "name": "Activity Type Name",
-    "description": "Description",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "name": "Nombre del Tipo de Actividad",
+    "description": "Descripción",
+    "createdDate": "Fecha de Creación",
+    "createdBy": "Creado Por",
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Página {{current}} / {{total}}"
   },
   "stats": {
-    "totalActivityTypes": "Total Activity Types",
-    "activeActivityTypes": "Active Activity Types",
-    "newThisMonth": "New This Month"
+    "totalActivityTypes": "Total de Tipos de Actividad",
+    "activeActivityTypes": "Tipos de Actividad Activos",
+    "newThisMonth": "Nuevos este Mes"
   },
   "messages": {
-    "createSuccess": "Activity type created successfully",
-    "createError": "Failed to create activity type",
-    "updateSuccess": "Activity type updated successfully",
-    "updateError": "Failed to update activity type",
-    "deleteSuccess": "Activity type deleted successfully",
-    "deleteError": "Failed to delete activity type"
+    "createSuccess": "Tipo de actividad creado con éxito",
+    "createError": "No se pudo crear el tipo de actividad",
+    "updateSuccess": "Tipo de actividad actualizado con éxito",
+    "updateError": "No se pudo actualizar el tipo de actividad",
+    "deleteSuccess": "Tipo de actividad eliminado con éxito",
+    "deleteError": "No se pudo eliminar el tipo de actividad"
   },
   "deleteConfirm": {
-    "confirmTitle": "Delete Activity Type",
-    "confirmMessage": "Are you sure you want to delete {{name}} activity type?"
+    "confirmTitle": "Eliminar Tipo de Actividad",
+    "confirmMessage": "¿Está seguro de que desea eliminar el tipo de actividad {{name}}?"
   }
 }
