--- a/src/locales/es/approval-flow-management.json
+++ b/src/locales/es/approval-flow-management.json
@@ -1,76 +1,76 @@
 {
   "approvalFlow": {
-    "menu": "Approval Flow Management",
-    "description": "Manage and organize approval flows",
-    "addButton": "Add New Approval Flow",
+    "menu": "Gestión de Flujos de Aprobación",
+    "description": "Gestionar y organizar flujos de aprobación",
+    "addButton": "Añadir Nuevo Flujo",
     "table": {
       "id": "ID",
-      "documentType": "Document Type",
-      "description": "Description",
-      "isActive": "Active",
-      "createdDate": "Created Date",
-      "createdBy": "Created By",
-      "actions": "Actions",
-      "showing": "Showing {{from}}-{{to}} / {{total}}",
-      "page": "Page {{current}} / {{total}}"
+      "documentType": "Tipo de Documento",
+      "description": "Descripción",
+      "isActive": "Activo",
+      "createdDate": "Fecha Creación",
+      "createdBy": "Creado Por",
+      "actions": "Acciones",
+      "showing": "Mostrando {{from}}-{{to}} de {{total}}",
+      "page": "Página {{current}} / {{total}}"
     },
     "form": {
-      "addTitle": "Add New Approval Flow",
-      "editTitle": "Edit Approval Flow",
-      "addDescription": "Enter new approval flow information",
-      "editDescription": "Edit approval flow information",
-      "documentType": "Document Type",
-      "selectDocumentType": "Select document type",
-      "noDocumentTypeSelected": "No document type selected",
-      "documentTypeRequired": "Document type selection is required",
-      "description": "Description",
-      "descriptionPlaceholder": "Enter description (optional)",
-      "descriptionMaxLength": "Description can be at most 200 characters",
-      "isActive": "Active",
-      "isActiveDescription": "Active status of the approval flow",
-      "cancel": "Cancel",
-      "save": "Save",
-      "saving": "Saving..."
+      "addTitle": "Añadir Nuevo Flujo",
+      "editTitle": "Editar Flujo",
+      "addDescription": "Ingrese información del nuevo flujo",
+      "editDescription": "Editar información del flujo",
+      "documentType": "Tipo de Documento",
+      "selectDocumentType": "Seleccionar tipo de documento",
+      "noDocumentTypeSelected": "Ningún tipo seleccionado",
+      "documentTypeRequired": "La selección del tipo de documento es obligatoria",
+      "description": "Descripción",
+      "descriptionPlaceholder": "Ingrese descripción (opcional)",
+      "descriptionMaxLength": "La descripción puede tener máx. 200 caracteres",
+      "isActive": "Activo",
+      "isActiveDescription": "Estado activo del flujo de aprobación",
+      "cancel": "Cancelar",
+      "save": "Guardar",
+      "saving": "Guardando..."
     },
-    "loading": "Loading...",
-    "noData": "No data",
-    "active": "Active",
-    "inactive": "Inactive",
-    "previous": "Previous",
-    "next": "Next",
+    "loading": "Cargando...",
+    "noData": "Sin datos",
+    "active": "Activo",
+    "inactive": "Inactivo",
+    "previous": "Anterior",
+    "next": "Siguiente",
     "delete": {
-      "action": "Delete",
-      "cancel": "Cancel",
-      "confirmTitle": "Delete Approval Flow",
-      "confirmMessage": "Are you sure you want to delete this approval flow?"
+      "action": "Eliminar",
+      "cancel": "Cancelar",
+      "confirmTitle": "Eliminar Flujo",
+      "confirmMessage": "¿Está seguro de que desea eliminar este flujo de aprobación?"
     },
     "documentType": {
-      "offer": "Offer",
-      "request": "Request",
-      "order": "Order"
+      "offer": "Oferta",
+      "request": "Solicitud",
+      "order": "Pedido"
     }
   },
   "approvalFlowStep": {
-    "title": "Flow Steps",
-    "addButton": "Add Step",
-    "empty": "No steps added yet",
-    "unknownRoleGroup": "No Role Group",
-    "stepDescription": "Approval Order: {{order}}",
+    "title": "Pasos del Flujo",
+    "addButton": "Añadir Paso",
+    "empty": "No hay pasos añadidos",
+    "unknownRoleGroup": "Sin Grupo de Roles",
+    "stepDescription": "Orden de Aprobación: {{order}}",
     "form": {
-      "addTitle": "Add New Step",
-      "editTitle": "Edit Step",
-      "addDescription": "Add new flow step",
-      "editDescription": "Edit flow step information",
-      "approvalRoleGroup": "Role Group",
-      "selectRoleGroup": "Select role group",
-      "noRoleGroupSelected": "No role group selected",
-      "approvalRoleGroupIdRequired": "Role group selection is required",
-      "cancel": "Cancel",
-      "save": "Save",
-      "saving": "Saving..."
+      "addTitle": "Añadir Nuevo Paso",
+      "editTitle": "Editar Paso",
+      "addDescription": "Añadir nuevo paso al flujo",
+      "editDescription": "Editar información del paso",
+      "approvalRoleGroup": "Grupo de Roles",
+      "selectRoleGroup": "Seleccionar grupo de roles",
+      "noRoleGroupSelected": "Ningún grupo seleccionado",
+      "approvalRoleGroupIdRequired": "La selección del grupo de roles es obligatoria",
+      "cancel": "Cancelar",
+      "save": "Guardar",
+      "saving": "Guardando..."
     },
     "messages": {
-      "deleteConfirm": "Are you sure you want to delete this step?"
+      "deleteConfirm": "¿Está seguro de que desea eliminar este paso?"
     }
   }
 }
