--- a/src/locales/es/approval-user-role-management.json
+++ b/src/locales/es/approval-user-role-management.json
@@ -1,46 +1,46 @@
 {
   "approvalUserRole": {
-    "menu": "Approval User Role Management",
-    "description": "Manage and organize approval user roles",
-    "addButton": "Add New Role",
-    "searchPlaceholder": "Search...",
-    "refresh": "Refresh",
-    "loading": "Loading...",
-    "noData": "No data",
+    "menu": "Gestión de Roles de Usuario de Aprobación",
+    "description": "Gestionar y organizar roles de usuario de aprobación",
+    "addButton": "Añadir Nuevo Rol",
+    "searchPlaceholder": "Buscar...",
+    "refresh": "Actualizar",
+    "loading": "Cargando...",
+    "noData": "Sin datos",
     "table": {
       "id": "ID",
-      "userFullName": "User",
-      "approvalRoleName": "Approval Role",
-      "createdDate": "Created Date",
-      "createdBy": "Created By",
-      "actions": "Actions",
-      "showing": "Showing {{from}}-{{to}} / {{total}}",
-      "page": "Page {{current}} / {{total}}",
-      "previous": "Previous",
-      "next": "Next"
+      "userFullName": "Usuario",
+      "approvalRoleName": "Rol de Aprobación",
+      "createdDate": "Fecha Creación",
+      "createdBy": "Creado Por",
+      "actions": "Acciones",
+      "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+      "page": "Página {{current}} / {{total}}",
+      "previous": "Anterior",
+      "next": "Siguiente"
     },
     "delete": {
-      "title": "Delete Role",
-      "confirmMessage": "Are you sure you want to delete this user role?",
-      "confirmButton": "Delete",
-      "cancelButton": "Cancel"
+      "title": "Eliminar Rol",
+      "confirmMessage": "¿Está seguro de que desea eliminar este rol de usuario?",
+      "confirmButton": "Eliminar",
+      "cancelButton": "Cancelar"
     },
     "form": {
-      "editTitle": "Edit Approval User Role",
-      "addTitle": "Add New Approval User Role",
-      "editDescription": "Edit approval user role information",
-      "addDescription": "Enter new approval user role information",
-      "userId": "User",
-      "selectUser": "Select User",
-      "noUserSelected": "No user selected",
-      "approvalRoleId": "Approval Role",
-      "selectApprovalRole": "Select Approval Role",
-      "noApprovalRoleSelected": "No approval role selected",
-      "userIdRequired": "User selection is required",
-      "approvalRoleIdRequired": "Approval role selection is required",
-      "save": "Save",
-      "saving": "Saving...",
-      "cancel": "Cancel"
+      "editTitle": "Editar Rol de Usuario",
+      "addTitle": "Añadir Nuevo Rol de Usuario",
+      "editDescription": "Editar información del rol de usuario",
+      "addDescription": "Ingrese información del nuevo rol de usuario",
+      "userId": "Usuario",
+      "selectUser": "Seleccionar Usuario",
+      "noUserSelected": "Ningún usuario seleccionado",
+      "approvalRoleId": "Rol de Aprobación",
+      "selectApprovalRole": "Seleccionar Rol de Aprobación",
+      "noApprovalRoleSelected": "Ningún rol seleccionado",
+      "userIdRequired": "La selección del usuario es obligatoria",
+      "approvalRoleIdRequired": "La selección del rol de aprobación es obligatoria",
+      "save": "Guardar",
+      "saving": "Guardando...",
+      "cancel": "Cancelar"
     }
   }
 }
