--- a/src/locales/es/auth.json
+++ b/src/locales/es/auth.json
@@ -1,46 +1,46 @@
 {
   "auth": {
     "login": {
-      "title": "Sales & Customer Management",
-      "slogan": "\"Manage your business with <1>v3rii</1>, not with guesses.\"",
-      "branchPlaceholder": "Select Branch",
-      "emailPlaceholder": "Corporate Email",
-      "passwordPlaceholder": "Password",
-      "rememberMe": "Remember Me",
-      "forgotPassword": "Forgot Password?",
-      "submitButton": "Login",
-      "processing": "Processing...",
-      "sessionExpired": "Your session has expired. Please login again."
+      "title": "Gestión de Ventas y Clientes",
+      "slogan": "\"Gestione su negocio con <1>v3rii</1>, no con suposiciones.\"",
+      "branchPlaceholder": "Seleccionar Sucursal",
+      "emailPlaceholder": "Correo Corporativo",
+      "passwordPlaceholder": "Contraseña",
+      "rememberMe": "Recuérdame",
+      "forgotPassword": "¿Olvidaste tu contraseña?",
+      "submitButton": "Iniciar Sesión",
+      "processing": "Procesando...",
+      "sessionExpired": "Su sesión ha caducado. Por favor, inicie sesión nuevamente."
     },
     "forgotPassword": {
-      "title": "Forgot Password",
-      "description": "Enter your email address to reset your password. We will send you a password reset link.",
-      "emailPlaceholder": "Email Address",
-      "submitButton": "Send Password Reset Request",
-      "backToLogin": "Back to Login",
-      "processing": "Processing..."
+      "title": "¿Olvidaste tu contraseña?",
+      "description": "Ingrese su dirección de correo electrónico para restablecer su contraseña. Le enviaremos un enlace de restablecimiento.",
+      "emailPlaceholder": "Dirección de Correo",
+      "submitButton": "Enviar Solicitud de Restablecimiento",
+      "backToLogin": "Volver al Inicio de Sesión",
+      "processing": "Procesando..."
     },
     "resetPassword": {
-      "title": "Reset Password",
-      "newPasswordPlaceholder": "New Password",
-      "confirmPasswordPlaceholder": "Confirm Password",
-      "submitButton": "Reset Password",
-      "processing": "Processing...",
-      "invalidToken": "Invalid or missing token. Please check the password reset link again.",
-      "tokenNotFound": "Token not found"
+      "title": "Restablecer Contraseña",
+      "newPasswordPlaceholder": "Nueva Contraseña",
+      "confirmPasswordPlaceholder": "Confirmar Contraseña",
+      "submitButton": "Restablecer Contraseña",
+      "processing": "Procesando...",
+      "invalidToken": "Token inválido o faltante. Verifique el enlace nuevamente.",
+      "tokenNotFound": "Token no encontrado"
     },
     "validation": {
-      "emailInvalid": "Please enter a valid email address",
-      "passwordRequired": "Password is required",
-      "branchRequired": "Branch selection is required",
-      "passwordMinLength": "Password must be at least 8 characters",
-      "tokenRequired": "Token is required",
-      "newPasswordMinLength": "Password must be at least 6 characters",
-      "confirmPasswordRequired": "Confirm password is required",
-      "passwordsMismatch": "Passwords do not match",
-      "currentPasswordRequired": "Current password is required",
-      "newPasswordMaxLength": "New password must be at most 100 characters",
-      "newPasswordSameAsCurrent": "New password cannot be the same as current password"
+      "emailInvalid": "Ingrese una dirección de correo válida",
+      "passwordRequired": "La contraseña es obligatoria",
+      "branchRequired": "La selección de sucursal es obligatoria",
+      "passwordMinLength": "La contraseña debe tener al menos 8 caracteres",
+      "tokenRequired": "El token es obligatorio",
+      "newPasswordMinLength": "La contraseña debe tener al menos 6 caracteres",
+      "confirmPasswordRequired": "La confirmación de la contraseña es obligatoria",
+      "passwordsMismatch": "Las contraseñas no coinciden",
+      "currentPasswordRequired": "La contraseña actual es obligatoria",
+      "newPasswordMaxLength": "La nueva contraseña debe tener como máximo 100 caracteres",
+      "newPasswordSameAsCurrent": "La nueva contraseña no puede ser igual a la actual"
     }
   }
 }
