--- a/src/locales/es/daily-tasks.json
+++ b/src/locales/es/daily-tasks.json
@@ -1,42 +1,42 @@
 {
-  "title": "Daily Tasks",
-  "fullTitle": "Daily Activities & To-Do",
-  "subtitle": "Manage your tasks, track activities, and use the calendar view",
-  "completed": "Completed",
-  "pending": "Pending",
-  "completion": "Completion",
-  "searchPlaceholder": "Search task...",
-  "allTasks": "All Tasks",
-  "priority": "Priority",
-  "allPriorities": "All",
-  "newTask": "New Task",
-  "newTodo": "New To-Do",
-  "noTasks": "No tasks found",
-  "tasks": "Tasks",
-  "weeklyTasks": "Weekly Tasks",
-  "todoList": "To-Do List",
-  "dailyList": "Daily List",
-  "calendar": "Calendar",
-  "status": "Status:",
-  "all": "All",
-  "inProgress": "In Progress",
-  "employee": "Employee:",
-  "allEmployees": "All Employees",
-  "unassigned": "Unassigned",
-  "unknownUser": "Unknown User",
-  "start": "Start",
-  "putOnHold": "Put on Hold",
-  "complete": "Complete",
-  "more": "more",
-  "today": "Today",
-  "loading": "Loading...",
+  "title": "Tareas Diarias",
+  "fullTitle": "Actividades Diarias y Tareas Pendientes",
+  "subtitle": "Gestione sus tareas, haga seguimiento de actividades y use la vista de calendario",
+  "completed": "Completado",
+  "pending": "Pendiente",
+  "completion": "Finalización",
+  "searchPlaceholder": "Buscar tarea...",
+  "allTasks": "Todas las Tareas",
+  "priority": "Prioridad",
+  "allPriorities": "Todas",
+  "newTask": "Nueva Tarea",
+  "newTodo": "Nueva Tarea Pendiente",
+  "noTasks": "No se encontraron tareas",
+  "tasks": "Tareas",
+  "weeklyTasks": "Tareas Semanales",
+  "todoList": "Lista de Tareas",
+  "dailyList": "Lista Diaria",
+  "calendar": "Calendario",
+  "status": "Estado:",
+  "all": "Todos",
+  "inProgress": "En Progreso",
+  "employee": "Empleado:",
+  "allEmployees": "Todos los Empleados",
+  "unassigned": "Sin Asignar",
+  "unknownUser": "Usuario Desconocido",
+  "start": "Iniciar",
+  "putOnHold": "Poner en Espera",
+  "complete": "Completar",
+  "more": "más",
+  "today": "Hoy",
+  "loading": "Cargando...",
   "days": {
-    "mon": "Mon",
-    "tue": "Tue",
-    "wed": "Wed",
-    "thu": "Thu",
-    "fri": "Fri",
-    "sat": "Sat",
-    "sun": "Sun"
+    "mon": "Lun",
+    "tue": "Mar",
+    "wed": "Mié",
+    "thu": "Jue",
+    "fri": "Vie",
+    "sat": "Sáb",
+    "sun": "Dom"
   }
 }
