--- a/src/locales/es/payment-type-management.json
+++ b/src/locales/es/payment-type-management.json
@@ -1,51 +1,29 @@
 {
-  "title": "Payment Type Management",
-  "headerDescription": "Manage and edit payment types",
-  "create": "New Payment Type",
-  "edit": "Edit Payment Type",
-  "editDescription": "Edit payment type information",
-  "createDescription": "Enter new payment type information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Payment Type",
-  "name": "Name",
-  "namePlaceholder": "Enter payment type name",
-  "description": "Description",
-  "descriptionPlaceholder": "Enter description (optional)",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "refresh": "Refresh",
-  "loading": "Loading...",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this payment type?",
-  "createSuccess": "Payment type created successfully",
-  "updateSuccess": "Payment type updated successfully",
-  "deleteSuccess": "Payment type deleted successfully",
-  "createError": "An error occurred while creating payment type",
-  "updateError": "An error occurred while updating payment type",
-  "deleteError": "An error occurred while deleting payment type",
+  "title": "Gestión de Tipos de Pago",
+  "description": "Configurar y gestionar métodos de pago",
+  "create": "Nuevo Tipo de Pago",
+  "edit": "Editar Tipo de Pago",
+  "delete": "Eliminar",
   "table": {
     "id": "ID",
-    "name": "Name",
-    "description": "Description",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
+    "name": "Nombre",
+    "code": "Código",
+    "description": "Descripción",
+    "isActive": "Activo",
+    "actions": "Acciones"
   },
   "form": {
-    "name": {
-      "required": "Name is required",
-      "maxLength": "Name can be at most 100 characters"
-    },
-    "description": {
-      "maxLength": "Description can be at most 500 characters"
-    }
+    "name": "Nombre",
+    "code": "Código",
+    "description": "Descripción",
+    "isActive": "Activo",
+    "nameRequired": "El nombre es obligatorio",
+    "codeRequired": "El código es obligatorio"
+  },
+  "messages": {
+    "createSuccess": "Tipo de pago creado con éxito",
+    "updateSuccess": "Tipo de pago actualizado con éxito",
+    "deleteSuccess": "Tipo de pago eliminado con éxito",
+    "confirmDelete": "¿Está seguro de que desea eliminar este tipo de pago?"
   }
 }
