--- a/src/locales/es/product-pricing-management.json
+++ b/src/locales/es/product-pricing-management.json
@@ -1,118 +1,118 @@
 {
-  "title": "Product Pricing Management",
-  "description": "Manage and edit product pricings",
-  "create": "New Pricing",
-  "createDescription": "Enter new pricing information",
-  "edit": "Edit Pricing",
-  "editDescription": "Edit pricing information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Pricing",
-  "erpProductCode": "ERP Product Code",
-  "erpGroupCode": "ERP Product Group Code",
-  "currency": "Currency",
-  "listPrice": "List Price",
-  "costPrice": "Cost Price",
-  "discount1": "Discount 1",
-  "discount2": "Discount 2",
-  "discount3": "Discount 3",
-  "finalPrice": "Final Price",
-  "profitMargin": "Profit Margin",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "filterByErpProductCode": "Filter by ERP Product Code",
-  "filterByErpGroupCode": "Filter by ERP Group Code",
-  "filterByCurrency": "Filter by Currency",
-  "filterByPriceRange": "Filter by Price Range",
-  "filterByDiscountRange": "Filter by Discount Range",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this pricing?",
-  "createSuccess": "Pricing created successfully",
-  "updateSuccess": "Pricing updated successfully",
-  "deleteSuccess": "Pricing deleted successfully",
-  "createError": "An error occurred while creating pricing",
-  "updateError": "An error occurred while updating pricing",
-  "deleteError": "An error occurred while deleting pricing",
-  "erpProductCodeRequired": "ERP product code is required",
-  "erpProductCodeMaxLength": "ERP product code must be at most 50 characters",
-  "erpGroupCodeRequired": "ERP product group code is required",
-  "erpGroupCodeMaxLength": "ERP product group code must be at most 50 characters",
-  "currencyRequired": "Currency selection is required",
-  "currencyMaxLength": "Currency must be at most 50 characters",
-  "listPriceRequired": "List price is required",
-  "listPriceMin": "List price must be 0 or greater",
-  "costPriceRequired": "Cost price is required",
-  "costPriceMin": "Cost price must be 0 or greater",
-  "discount1Range": "Discount 1 must be between 0 and 100",
-  "discount2Range": "Discount 2 must be between 0 and 100",
-  "discount3Range": "Discount 3 must be between 0 and 100",
-  "enterErpProductCode": "Enter ERP Product Code",
-  "enterErpGroupCode": "Enter ERP Product Group Code",
-  "selectCurrency": "Please select currency",
-  "enterListPrice": "Enter List Price",
-  "enterCostPrice": "Enter Cost Price",
-  "enterDiscount1": "Enter Discount 1 (0-100, Optional)",
-  "enterDiscount2": "Enter Discount 2 (0-100, Optional)",
-  "enterDiscount3": "Enter Discount 3 (0-100, Optional)",
-  "priceCalculation": "Price Calculation",
-  "finalPriceAfterDiscounts": "Final Price After Discounts",
-  "loading": "Loading...",
-  "save": "Save",
-  "saving": "Saving...",
-  "cancel": "Cancel",
-  "close": "Close",
-  "clearFilters": "Clear Filters",
-  "applyFilters": "Apply Filters",
-  "minPrice": "Min Price",
-  "maxPrice": "Max Price",
-  "minDiscount": "Min Discount",
-  "maxDiscount": "Max Discount",
+  "title": "Gestión de Precios de Productos",
+  "description": "Gestionar y editar precios de productos",
+  "create": "Nuevo Precio",
+  "createDescription": "Introducir información del nuevo precio",
+  "edit": "Editar Precio",
+  "editDescription": "Editar información del precio",
+  "delete": "Eliminar",
+  "deleteTitle": "Eliminar Precio",
+  "erpProductCode": "Código de Producto ERP",
+  "erpGroupCode": "Código de Grupo de Productos ERP",
+  "currency": "Moneda",
+  "listPrice": "Precio de Lista",
+  "costPrice": "Precio de Coste",
+  "discount1": "Descuento 1",
+  "discount2": "Descuento 2",
+  "discount3": "Descuento 3",
+  "finalPrice": "Precio Final",
+  "profitMargin": "Margen de Beneficio",
+  "createdDate": "Fecha de Creación",
+  "updatedDate": "Fecha de Actualización",
+  "actions": "Acciones",
+  "search": "Buscar",
+  "filterByErpProductCode": "Filtrar por Código de Producto ERP",
+  "filterByErpGroupCode": "Filtrar por Código de Grupo de Productos ERP",
+  "filterByCurrency": "Filtrar por Moneda",
+  "filterByPriceRange": "Filtrar por Rango de Precios",
+  "filterByDiscountRange": "Filtrar por Rango de Descuentos",
+  "noData": "No se encontraron datos",
+  "confirmDelete": "¿Está seguro de que desea eliminar este precio?",
+  "createSuccess": "Precio creado con éxito",
+  "updateSuccess": "Precio actualizado con éxito",
+  "deleteSuccess": "Precio eliminado con éxito",
+  "createError": "Ocurrió un error al crear el precio",
+  "updateError": "Ocurrió un error al actualizar el precio",
+  "deleteError": "Ocurrió un error al eliminar el precio",
+  "erpProductCodeRequired": "El código de producto ERP es obligatorio",
+  "erpProductCodeMaxLength": "El código de producto ERP debe tener como máximo 50 caracteres",
+  "erpGroupCodeRequired": "El código de grupo de productos ERP es obligatorio",
+  "erpGroupCodeMaxLength": "El código de grupo de productos ERP debe tener como máximo 50 caracteres",
+  "currencyRequired": "La selección de moneda es obligatoria",
+  "currencyMaxLength": "La moneda debe tener como máximo 50 caracteres",
+  "listPriceRequired": "El precio de lista es obligatorio",
+  "listPriceMin": "El precio de lista debe ser 0 o mayor",
+  "costPriceRequired": "El precio de coste es obligatorio",
+  "costPriceMin": "El precio de coste debe ser 0 o mayor",
+  "discount1Range": "El descuento 1 debe estar entre 0 y 100",
+  "discount2Range": "El descuento 2 debe estar entre 0 y 100",
+  "discount3Range": "El descuento 3 debe estar entre 0 y 100",
+  "enterErpProductCode": "Introducir Código de Producto ERP",
+  "enterErpGroupCode": "Introducir Código de Grupo de Productos ERP",
+  "selectCurrency": "Por favor seleccione moneda",
+  "enterListPrice": "Introducir Precio de Lista",
+  "enterCostPrice": "Introducir Precio de Coste",
+  "enterDiscount1": "Introducir Descuento 1 (0-100, Opcional)",
+  "enterDiscount2": "Introducir Descuento 2 (0-100, Opcional)",
+  "enterDiscount3": "Introducir Descuento 3 (0-100, Opcional)",
+  "priceCalculation": "Cálculo de Precio",
+  "finalPriceAfterDiscounts": "Precio Final Después de Descuentos",
+  "loading": "Cargando...",
+  "save": "Guardar",
+  "saving": "Guardando...",
+  "cancel": "Cancelar",
+  "close": "Cerrar",
+  "clearFilters": "Borrar Filtros",
+  "applyFilters": "Aplicar Filtros",
+  "minPrice": "Precio Mínimo",
+  "maxPrice": "Precio Máximo",
+  "minDiscount": "Descuento Mínimo",
+  "maxDiscount": "Descuento Máximo",
   "percentage": "%",
-  "try": "Turkish Lira",
-  "usd": "US Dollar",
+  "try": "Lira Turca",
+  "usd": "Dólar Estadounidense",
   "eur": "Euro",
-  "gbp": "British Pound",
-  "jpy": "Japanese Yen",
-  "calculateFinalPrice": "Calculate Final Price",
-  "profitMarginLabel": "Profit Margin",
-  "highProfit": "High Profit",
-  "mediumProfit": "Medium Profit",
-  "lowProfit": "Low Profit",
-  "negativeProfit": "Loss",
-  "duplicateWarning": "This product code, group code, and currency combination already exists. Do you want to continue?",
-  "duplicateExists": "This combination already exists",
-  "checkingDuplicate": "Checking...",
-  "noDuplicate": "This combination is available",
-  "selectStokCode": "Select stock",
-    "selectStok": "Select Stock",
-    "erpGroupCodePlaceholder": "Automatically filled when stock is selected",
-    "profitAmount": "Profit Amount",
-  "profitPercentage": "Profit Percentage",
-  "searchProductCode": "Search Product Code",
-  "searchGroupCode": "Search Group Code",
-  "stockStatus": "STOCK STATUS",
-  "noStockTracking": "No Stock Tracking",
-  "priceAndDiscount": "PRICE & DISCOUNT",
+  "gbp": "Libra Esterlina",
+  "jpy": "Yen Japonés",
+  "calculateFinalPrice": "Calcular Precio Final",
+  "profitMarginLabel": "Margen de Beneficio",
+  "highProfit": "Beneficio Alto",
+  "mediumProfit": "Beneficio Medio",
+  "lowProfit": "Beneficio Bajo",
+  "negativeProfit": "Pérdida",
+  "duplicateWarning": "Esta combinación de código de producto, código de grupo y moneda ya existe. ¿Desea continuar?",
+  "duplicateExists": "Esta combinación ya existe",
+  "checkingDuplicate": "Comprobando...",
+  "noDuplicate": "Esta combinación está disponible",
+  "selectStokCode": "Seleccionar stock",
+  "selectStok": "Seleccionar Stock",
+  "erpGroupCodePlaceholder": "Se completa automáticamente al seleccionar stock",
+  "profitAmount": "Cantidad de Beneficio",
+  "profitPercentage": "Porcentaje de Beneficio",
+  "searchProductCode": "Buscar Código de Producto",
+  "searchGroupCode": "Buscar Código de Grupo",
+  "stockStatus": "ESTADO DEL STOCK",
+  "noStockTracking": "Sin Seguimiento de Stock",
+  "priceAndDiscount": "PRECIO Y DESCUENTO",
   "table": {
     "id": "ID",
-    "erpProductCode": "ERP Product Code",
-    "erpGroupCode": "ERP Product Group Code",
-    "currency": "Currency",
-    "listPrice": "List Price",
-    "costPrice": "Cost Price",
-    "discount1": "Discount 1",
-    "discount2": "Discount 2",
-    "discount3": "Discount 3",
-    "finalPrice": "Final Price",
-    "profitMargin": "Profit Margin",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
+    "erpProductCode": "Código de Producto ERP",
+    "erpGroupCode": "Código de Grupo de Productos ERP",
+    "currency": "Moneda",
+    "listPrice": "Precio de Lista",
+    "costPrice": "Precio de Coste",
+    "discount1": "Descuento 1",
+    "discount2": "Descuento 2",
+    "discount3": "Descuento 3",
+    "finalPrice": "Precio Final",
+    "profitMargin": "Margen de Beneficio",
+    "createdDate": "Fecha de Creación",
+    "updatedDate": "Fecha de Actualización",
+    "showing": "Mostrando {{from}}-{{to}} de {{total}}",
+    "page": "Página {{current}} de {{total}}"
   },
-  "previous": "Previous",
-  "next": "Next",
-  "deleteConfirmTitle": "Delete Confirmation",
-  "deleteConfirmMessage": "Are you sure you want to delete this record? This action cannot be undone."
+  "previous": "Anterior",
+  "next": "Siguiente",
+  "deleteConfirmTitle": "Confirmación de Eliminación",
+  "deleteConfirmMessage": "¿Está seguro de que desea eliminar este registro? Esta acción no se puede deshacer."
 }
