--- a/src/locales/es/product-select-dialog.json
+++ b/src/locales/es/product-select-dialog.json
@@ -1,10 +1,16 @@
 {
-  "title": "Select Product",
-  "description": "Select a product to add to the quotation line",
-  "product": "PRODUCT",
-  "noProducts": "No products found",
-  "noResults": "No search results found",
-  "searchPlaceholder": "Search by product code or name...",
-  "voiceSearch": "Voice search",
-  "loading": "Loading"
+  "title": "Selección de Producto",
+  "searchPlaceholder": "Buscar producto...",
+  "select": "Seleccionar",
+  "cancel": "Cancelar",
+  "columns": {
+    "code": "Código",
+    "name": "Nombre",
+    "description": "Descripción",
+    "price": "Precio",
+    "currency": "Moneda",
+    "stock": "Stock"
+  },
+  "noData": "No se encontraron productos",
+  "loading": "Cargando productos..."
 }
