--- a/src/locales/es/title-management.json
+++ b/src/locales/es/title-management.json
@@ -1,46 +1,35 @@
 {
-  "loading": "Loading...",
-  "noData": "No data found",
-  "search": "Search...",
-  "refresh": "Refresh",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
-  "delete": "Delete",
-  "deleting": "Deleting...",
-  "actions": "Actions",
-  "edit": "Edit",
-  "header": {
-    "title": "Title Management",
-    "description": "Manage title definitions here."
-  },
+  "menu": "Gestión de Títulos",
+  "title": "Gestión de Títulos",
+  "description": "Gestionar y editar títulos",
+  "addButton": "Añadir Nuevo Título",
+  "deleteTitle": "Eliminar Título",
+  "deleteMessage": "¿Estás seguro de que deseas eliminar este título?",
+  "deleteSuccess": "Título eliminado con éxito",
   "table": {
-    "id": "ID",
-    "name": "Title Name",
-    "code": "Code",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "name": "Título",
+    "code": "Código",
+    "description": "Descripción",
+    "status": "Estado",
+    "actions": "Acciones",
+    "searchPlaceholder": "Buscar títulos...",
+    "showing": "Mostrando {{from}}-{{to}} de {{total}}",
+    "page": "Página {{current}} de {{total}}",
+    "rowsPerPage": "Filas por página"
   },
   "form": {
-    "addTitle": "Add New Title",
-    "editTitle": "Edit Title",
-    "addDescription": "Enter new title details",
-    "editDescription": "Edit title details",
-    "titleName": "Title Name",
-    "titleNamePlaceholder": "Enter title name",
-    "titleCode": "Title Code",
-    "codePlaceholder": "Enter code (optional)",
-    "cancel": "Cancel",
-    "save": "Save",
-    "saving": "Saving..."
-  },
-  "delete": {
-    "confirmTitle": "Delete Title",
-    "confirmMessage": "Are you sure you want to delete the title {{name}}?",
-    "button": "Delete"
+    "addTitle": "Añadir Nuevo Título",
+    "editTitle": "Editar Título",
+    "name": "Título",
+    "code": "Código",
+    "description": "Descripción",
+    "status": "Estado",
+    "active": "Activo",
+    "passive": "Pasivo",
+    "cancel": "Cancelar",
+    "save": "Guardar",
+    "required": "Requerido",
+    "successAdd": "Título añadido con éxito",
+    "successUpdate": "Título actualizado con éxito"
   }
 }
