--- a/src/locales/es/user-management.json
+++ b/src/locales/es/user-management.json
@@ -1,62 +1,38 @@
 {
-  "menu": "User Management",
-  "description": "Manage and edit users",
-  "addButton": "Add New User",
+  "menu": "Gestión de Usuarios",
+  "title": "Gestión de Usuarios",
+  "description": "Gestionar y editar usuarios",
+  "addButton": "Añadir Nuevo Usuario",
+  "deleteTitle": "Eliminar Usuario",
+  "deleteMessage": "¿Estás seguro de que deseas eliminar este usuario?",
+  "deleteSuccess": "Usuario eliminado con éxito",
   "table": {
-    "id": "ID",
-    "username": "Username",
-    "email": "Email",
-    "fullName": "Full Name",
-    "role": "Role",
-    "status": "Status",
-    "createdDate": "Created Date",
-    "active": "Active",
-    "inactive": "Inactive",
-    "confirmed": "Confirmed",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}",
-    "actions": "Actions",
-    "noData": "No data",
-    "loading": "Loading...",
-    "previous": "Previous",
-    "next": "Next",
-    "edit": "Edit",
-    "delete": "Delete"
+    "name": "Nombre",
+    "email": "Correo Electrónico",
+    "role": "Rol",
+    "status": "Estado",
+    "actions": "Acciones",
+    "searchPlaceholder": "Buscar usuarios...",
+    "showing": "Mostrando {{from}}-{{to}} de {{total}}",
+    "page": "Página {{current}} de {{total}}",
+    "rowsPerPage": "Filas por página"
   },
   "form": {
-    "editUser": "Edit User",
-    "addUser": "Add New User",
-    "editDescription": "Edit user information",
-    "addDescription": "Enter new user information",
-    "username": "Username",
-    "usernamePlaceholder": "Enter username",
-    "email": "Email",
-    "emailPlaceholder": "Enter email address",
-    "password": "Password",
-    "passwordPlaceholder": "Enter password (min 8 chars)",
-    "firstName": "First Name",
-    "firstNamePlaceholder": "Enter first name",
-    "lastName": "Last Name",
-    "lastNamePlaceholder": "Enter last name",
-    "phoneNumber": "Phone Number",
-    "phoneNumberPlaceholder": "Enter phone number",
-    "role": "Role",
-    "rolePlaceholder": "Enter role",
-    "isActive": "Active",
-    "isActiveDescription": "User active status",
-    "save": "Save",
-    "saving": "Saving...",
-    "cancel": "Cancel"
-  },
-  "stats": {
-    "totalUsers": "Total Users",
-    "activeUsers": "Active Users",
-    "newThisMonth": "New This Month",
-    "confirmedUsers": "Confirmed Users",
-    "loading": "Loading..."
-  },
-  "delete": {
-    "confirmTitle": "Delete User",
-    "confirmMessage": "Are you sure you want to delete user {{username}}?"
+    "addTitle": "Añadir Nuevo Usuario",
+    "editTitle": "Editar Usuario",
+    "firstName": "Nombre",
+    "lastName": "Apellido",
+    "email": "Correo Electrónico",
+    "role": "Rol",
+    "password": "Contraseña",
+    "confirmPassword": "Confirmar Contraseña",
+    "status": "Estado",
+    "active": "Activo",
+    "passive": "Pasivo",
+    "cancel": "Cancelar",
+    "save": "Guardar",
+    "required": "Requerido",
+    "successAdd": "Usuario añadido con éxito",
+    "successUpdate": "Usuario actualizado con éxito"
   }
 }
